// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Verify RDS Model level Auth rules on subscriptions: should successfully transform IdentityPool auth rules 1`] = `
"## [Start] Authorization rules. **
$util.qr($ctx.stash.put(\\"hasAuth\\", true))
#set( $authRules = [] )
#if( $ctx.stash.adminRoles && $ctx.stash.adminRoles.size() > 0 )
  $util.qr($authRules.add({
  \\"provider\\": \\"iam\\",
  \\"type\\": \\"admin\\",
  \\"strict\\": false,
  \\"roles\\": $ctx.stash.adminRoles
}))
#end
$util.qr($authRules.add({
  \\"type\\": \\"private\\",
  \\"provider\\": \\"iam\\",
  \\"roleArn\\": $ctx.stash.authRole,
  \\"cognitoIdentityPoolId\\": $ctx.stash.identityPoolId
}))
#set( $authResult = $util.authRules.subscriptionAuth($authRules) )
#if( !$authResult || ($authResult && !$authResult.authorized) )
  $util.unauthorized()
#end
#if( $authResult && !$util.isNullOrEmpty($authResult.authFilter) )
  #if( $util.isNullOrEmpty($ctx.args.filter) )
    #set( $ctx.args.filter = $authResult.authFilter )
  #else
    #set( $ctx.args.filter = {
  \\"and\\":   [$authResult.authFilter, $ctx.args.filter]
} )
  #end
#end
$util.toJson({\\"version\\":\\"2018-05-29\\",\\"payload\\":{}})
## [End] Authorization rules. **"
`;

exports[`Verify RDS Model level Auth rules on subscriptions: should successfully transform IdentityPool auth rules 2`] = `
"## [Start] Sandbox Mode Disabled. **
#if( !$ctx.stash.get(\\"hasAuth\\") )
  $util.unauthorized()
#end
$util.toJson({})
## [End] Sandbox Mode Disabled. **"
`;

exports[`Verify RDS Model level Auth rules on subscriptions: should successfully transform IdentityPool auth rules 3`] = `
"## [Start] Subscription Response template. **
#if( !$util.isNullOrEmpty($ctx.args.filter) )
$extensions.setSubscriptionFilter($util.transform.toSubscriptionFilter($ctx.args.filter))
#end
$util.toJson(null)
## [End] Subscription Response template. **"
`;

exports[`Verify RDS Model level Auth rules on subscriptions: should successfully transform IdentityPool auth rules 4`] = `
"## [Start] Authorization rules. **
$util.qr($ctx.stash.put(\\"hasAuth\\", true))
#set( $authRules = [] )
#if( $ctx.stash.adminRoles && $ctx.stash.adminRoles.size() > 0 )
  $util.qr($authRules.add({
  \\"provider\\": \\"iam\\",
  \\"type\\": \\"admin\\",
  \\"strict\\": false,
  \\"roles\\": $ctx.stash.adminRoles
}))
#end
$util.qr($authRules.add({
  \\"type\\": \\"private\\",
  \\"provider\\": \\"iam\\",
  \\"roleArn\\": $ctx.stash.authRole,
  \\"cognitoIdentityPoolId\\": $ctx.stash.identityPoolId
}))
#set( $authResult = $util.authRules.subscriptionAuth($authRules) )
#if( !$authResult || ($authResult && !$authResult.authorized) )
  $util.unauthorized()
#end
#if( $authResult && !$util.isNullOrEmpty($authResult.authFilter) )
  #if( $util.isNullOrEmpty($ctx.args.filter) )
    #set( $ctx.args.filter = $authResult.authFilter )
  #else
    #set( $ctx.args.filter = {
  \\"and\\":   [$authResult.authFilter, $ctx.args.filter]
} )
  #end
#end
$util.toJson({\\"version\\":\\"2018-05-29\\",\\"payload\\":{}})
## [End] Authorization rules. **"
`;

exports[`Verify RDS Model level Auth rules on subscriptions: should successfully transform IdentityPool auth rules 5`] = `
"## [Start] Sandbox Mode Disabled. **
#if( !$ctx.stash.get(\\"hasAuth\\") )
  $util.unauthorized()
#end
$util.toJson({})
## [End] Sandbox Mode Disabled. **"
`;

exports[`Verify RDS Model level Auth rules on subscriptions: should successfully transform IdentityPool auth rules 6`] = `
"## [Start] Subscription Response template. **
#if( !$util.isNullOrEmpty($ctx.args.filter) )
$extensions.setSubscriptionFilter($util.transform.toSubscriptionFilter($ctx.args.filter))
#end
$util.toJson(null)
## [End] Subscription Response template. **"
`;

exports[`Verify RDS Model level Auth rules on subscriptions: should successfully transform IdentityPool auth rules 7`] = `
"## [Start] Authorization rules. **
$util.qr($ctx.stash.put(\\"hasAuth\\", true))
#set( $authRules = [] )
#if( $ctx.stash.adminRoles && $ctx.stash.adminRoles.size() > 0 )
  $util.qr($authRules.add({
  \\"provider\\": \\"iam\\",
  \\"type\\": \\"admin\\",
  \\"strict\\": false,
  \\"roles\\": $ctx.stash.adminRoles
}))
#end
$util.qr($authRules.add({
  \\"type\\": \\"private\\",
  \\"provider\\": \\"iam\\",
  \\"roleArn\\": $ctx.stash.authRole,
  \\"cognitoIdentityPoolId\\": $ctx.stash.identityPoolId
}))
#set( $authResult = $util.authRules.subscriptionAuth($authRules) )
#if( !$authResult || ($authResult && !$authResult.authorized) )
  $util.unauthorized()
#end
#if( $authResult && !$util.isNullOrEmpty($authResult.authFilter) )
  #if( $util.isNullOrEmpty($ctx.args.filter) )
    #set( $ctx.args.filter = $authResult.authFilter )
  #else
    #set( $ctx.args.filter = {
  \\"and\\":   [$authResult.authFilter, $ctx.args.filter]
} )
  #end
#end
$util.toJson({\\"version\\":\\"2018-05-29\\",\\"payload\\":{}})
## [End] Authorization rules. **"
`;

exports[`Verify RDS Model level Auth rules on subscriptions: should successfully transform IdentityPool auth rules 8`] = `
"## [Start] Sandbox Mode Disabled. **
#if( !$ctx.stash.get(\\"hasAuth\\") )
  $util.unauthorized()
#end
$util.toJson({})
## [End] Sandbox Mode Disabled. **"
`;

exports[`Verify RDS Model level Auth rules on subscriptions: should successfully transform IdentityPool auth rules 9`] = `
"## [Start] Subscription Response template. **
#if( !$util.isNullOrEmpty($ctx.args.filter) )
$extensions.setSubscriptionFilter($util.transform.toSubscriptionFilter($ctx.args.filter))
#end
$util.toJson(null)
## [End] Subscription Response template. **"
`;

exports[`Verify RDS Model level Auth rules on subscriptions: should successfully transform IdentityPool auth rules 10`] = `
"## [Start] Authorization rules. **
$util.qr($ctx.stash.put(\\"hasAuth\\", true))
#set( $authRules = [] )
#if( $ctx.stash.adminRoles && $ctx.stash.adminRoles.size() > 0 )
  $util.qr($authRules.add({
  \\"provider\\": \\"iam\\",
  \\"type\\": \\"admin\\",
  \\"strict\\": false,
  \\"roles\\": $ctx.stash.adminRoles
}))
#end
$util.qr($authRules.add({
  \\"type\\": \\"public\\",
  \\"provider\\": \\"iam\\",
  \\"roleArn\\": $ctx.stash.unauthRole
}))
#set( $authResult = $util.authRules.subscriptionAuth($authRules) )
#if( !$authResult || ($authResult && !$authResult.authorized) )
  $util.unauthorized()
#end
#if( $authResult && !$util.isNullOrEmpty($authResult.authFilter) )
  #if( $util.isNullOrEmpty($ctx.args.filter) )
    #set( $ctx.args.filter = $authResult.authFilter )
  #else
    #set( $ctx.args.filter = {
  \\"and\\":   [$authResult.authFilter, $ctx.args.filter]
} )
  #end
#end
$util.toJson({\\"version\\":\\"2018-05-29\\",\\"payload\\":{}})
## [End] Authorization rules. **"
`;

exports[`Verify RDS Model level Auth rules on subscriptions: should successfully transform IdentityPool auth rules 11`] = `
"## [Start] Sandbox Mode Disabled. **
#if( !$ctx.stash.get(\\"hasAuth\\") )
  $util.unauthorized()
#end
$util.toJson({})
## [End] Sandbox Mode Disabled. **"
`;

exports[`Verify RDS Model level Auth rules on subscriptions: should successfully transform IdentityPool auth rules 12`] = `
"## [Start] Subscription Response template. **
#if( !$util.isNullOrEmpty($ctx.args.filter) )
$extensions.setSubscriptionFilter($util.transform.toSubscriptionFilter($ctx.args.filter))
#end
$util.toJson(null)
## [End] Subscription Response template. **"
`;

exports[`Verify RDS Model level Auth rules on subscriptions: should successfully transform IdentityPool auth rules 13`] = `
"## [Start] Authorization rules. **
$util.qr($ctx.stash.put(\\"hasAuth\\", true))
#set( $authRules = [] )
#if( $ctx.stash.adminRoles && $ctx.stash.adminRoles.size() > 0 )
  $util.qr($authRules.add({
  \\"provider\\": \\"iam\\",
  \\"type\\": \\"admin\\",
  \\"strict\\": false,
  \\"roles\\": $ctx.stash.adminRoles
}))
#end
$util.qr($authRules.add({
  \\"type\\": \\"public\\",
  \\"provider\\": \\"iam\\",
  \\"roleArn\\": $ctx.stash.unauthRole
}))
#set( $authResult = $util.authRules.subscriptionAuth($authRules) )
#if( !$authResult || ($authResult && !$authResult.authorized) )
  $util.unauthorized()
#end
#if( $authResult && !$util.isNullOrEmpty($authResult.authFilter) )
  #if( $util.isNullOrEmpty($ctx.args.filter) )
    #set( $ctx.args.filter = $authResult.authFilter )
  #else
    #set( $ctx.args.filter = {
  \\"and\\":   [$authResult.authFilter, $ctx.args.filter]
} )
  #end
#end
$util.toJson({\\"version\\":\\"2018-05-29\\",\\"payload\\":{}})
## [End] Authorization rules. **"
`;

exports[`Verify RDS Model level Auth rules on subscriptions: should successfully transform IdentityPool auth rules 14`] = `
"## [Start] Sandbox Mode Disabled. **
#if( !$ctx.stash.get(\\"hasAuth\\") )
  $util.unauthorized()
#end
$util.toJson({})
## [End] Sandbox Mode Disabled. **"
`;

exports[`Verify RDS Model level Auth rules on subscriptions: should successfully transform IdentityPool auth rules 15`] = `
"## [Start] Subscription Response template. **
#if( !$util.isNullOrEmpty($ctx.args.filter) )
$extensions.setSubscriptionFilter($util.transform.toSubscriptionFilter($ctx.args.filter))
#end
$util.toJson(null)
## [End] Subscription Response template. **"
`;

exports[`Verify RDS Model level Auth rules on subscriptions: should successfully transform IdentityPool auth rules 16`] = `
"## [Start] Authorization rules. **
$util.qr($ctx.stash.put(\\"hasAuth\\", true))
#set( $authRules = [] )
#if( $ctx.stash.adminRoles && $ctx.stash.adminRoles.size() > 0 )
  $util.qr($authRules.add({
  \\"provider\\": \\"iam\\",
  \\"type\\": \\"admin\\",
  \\"strict\\": false,
  \\"roles\\": $ctx.stash.adminRoles
}))
#end
$util.qr($authRules.add({
  \\"type\\": \\"public\\",
  \\"provider\\": \\"iam\\",
  \\"roleArn\\": $ctx.stash.unauthRole
}))
#set( $authResult = $util.authRules.subscriptionAuth($authRules) )
#if( !$authResult || ($authResult && !$authResult.authorized) )
  $util.unauthorized()
#end
#if( $authResult && !$util.isNullOrEmpty($authResult.authFilter) )
  #if( $util.isNullOrEmpty($ctx.args.filter) )
    #set( $ctx.args.filter = $authResult.authFilter )
  #else
    #set( $ctx.args.filter = {
  \\"and\\":   [$authResult.authFilter, $ctx.args.filter]
} )
  #end
#end
$util.toJson({\\"version\\":\\"2018-05-29\\",\\"payload\\":{}})
## [End] Authorization rules. **"
`;

exports[`Verify RDS Model level Auth rules on subscriptions: should successfully transform IdentityPool auth rules 17`] = `
"## [Start] Sandbox Mode Disabled. **
#if( !$ctx.stash.get(\\"hasAuth\\") )
  $util.unauthorized()
#end
$util.toJson({})
## [End] Sandbox Mode Disabled. **"
`;

exports[`Verify RDS Model level Auth rules on subscriptions: should successfully transform IdentityPool auth rules 18`] = `
"## [Start] Subscription Response template. **
#if( !$util.isNullOrEmpty($ctx.args.filter) )
$extensions.setSubscriptionFilter($util.transform.toSubscriptionFilter($ctx.args.filter))
#end
$util.toJson(null)
## [End] Subscription Response template. **"
`;

exports[`Verify RDS Model level Auth rules on subscriptions: should successfully transform apiKey auth rule 1`] = `
"## [Start] Authorization rules. **
$util.qr($ctx.stash.put(\\"hasAuth\\", true))
#set( $authRules = [] )
#if( $ctx.stash.adminRoles && $ctx.stash.adminRoles.size() > 0 )
  $util.qr($authRules.add({
  \\"provider\\": \\"iam\\",
  \\"type\\": \\"admin\\",
  \\"strict\\": false,
  \\"roles\\": $ctx.stash.adminRoles
}))
#end
$util.qr($authRules.add({
  \\"type\\": \\"public\\",
  \\"provider\\": \\"apiKey\\"
}))
#set( $authResult = $util.authRules.subscriptionAuth($authRules) )
#if( !$authResult || ($authResult && !$authResult.authorized) )
  $util.unauthorized()
#end
#if( $authResult && !$util.isNullOrEmpty($authResult.authFilter) )
  #if( $util.isNullOrEmpty($ctx.args.filter) )
    #set( $ctx.args.filter = $authResult.authFilter )
  #else
    #set( $ctx.args.filter = {
  \\"and\\":   [$authResult.authFilter, $ctx.args.filter]
} )
  #end
#end
$util.toJson({\\"version\\":\\"2018-05-29\\",\\"payload\\":{}})
## [End] Authorization rules. **"
`;

exports[`Verify RDS Model level Auth rules on subscriptions: should successfully transform apiKey auth rule 2`] = `
"## [Start] Sandbox Mode Disabled. **
#if( !$ctx.stash.get(\\"hasAuth\\") )
  $util.unauthorized()
#end
$util.toJson({})
## [End] Sandbox Mode Disabled. **"
`;

exports[`Verify RDS Model level Auth rules on subscriptions: should successfully transform apiKey auth rule 3`] = `
"## [Start] Subscription Response template. **
#if( !$util.isNullOrEmpty($ctx.args.filter) )
$extensions.setSubscriptionFilter($util.transform.toSubscriptionFilter($ctx.args.filter))
#end
$util.toJson(null)
## [End] Subscription Response template. **"
`;

exports[`Verify RDS Model level Auth rules on subscriptions: should successfully transform apiKey auth rule 4`] = `
"## [Start] Authorization rules. **
$util.qr($ctx.stash.put(\\"hasAuth\\", true))
#set( $authRules = [] )
#if( $ctx.stash.adminRoles && $ctx.stash.adminRoles.size() > 0 )
  $util.qr($authRules.add({
  \\"provider\\": \\"iam\\",
  \\"type\\": \\"admin\\",
  \\"strict\\": false,
  \\"roles\\": $ctx.stash.adminRoles
}))
#end
$util.qr($authRules.add({
  \\"type\\": \\"public\\",
  \\"provider\\": \\"apiKey\\"
}))
#set( $authResult = $util.authRules.subscriptionAuth($authRules) )
#if( !$authResult || ($authResult && !$authResult.authorized) )
  $util.unauthorized()
#end
#if( $authResult && !$util.isNullOrEmpty($authResult.authFilter) )
  #if( $util.isNullOrEmpty($ctx.args.filter) )
    #set( $ctx.args.filter = $authResult.authFilter )
  #else
    #set( $ctx.args.filter = {
  \\"and\\":   [$authResult.authFilter, $ctx.args.filter]
} )
  #end
#end
$util.toJson({\\"version\\":\\"2018-05-29\\",\\"payload\\":{}})
## [End] Authorization rules. **"
`;

exports[`Verify RDS Model level Auth rules on subscriptions: should successfully transform apiKey auth rule 5`] = `
"## [Start] Sandbox Mode Disabled. **
#if( !$ctx.stash.get(\\"hasAuth\\") )
  $util.unauthorized()
#end
$util.toJson({})
## [End] Sandbox Mode Disabled. **"
`;

exports[`Verify RDS Model level Auth rules on subscriptions: should successfully transform apiKey auth rule 6`] = `
"## [Start] Subscription Response template. **
#if( !$util.isNullOrEmpty($ctx.args.filter) )
$extensions.setSubscriptionFilter($util.transform.toSubscriptionFilter($ctx.args.filter))
#end
$util.toJson(null)
## [End] Subscription Response template. **"
`;

exports[`Verify RDS Model level Auth rules on subscriptions: should successfully transform apiKey auth rule 7`] = `
"## [Start] Authorization rules. **
$util.qr($ctx.stash.put(\\"hasAuth\\", true))
#set( $authRules = [] )
#if( $ctx.stash.adminRoles && $ctx.stash.adminRoles.size() > 0 )
  $util.qr($authRules.add({
  \\"provider\\": \\"iam\\",
  \\"type\\": \\"admin\\",
  \\"strict\\": false,
  \\"roles\\": $ctx.stash.adminRoles
}))
#end
$util.qr($authRules.add({
  \\"type\\": \\"public\\",
  \\"provider\\": \\"apiKey\\"
}))
#set( $authResult = $util.authRules.subscriptionAuth($authRules) )
#if( !$authResult || ($authResult && !$authResult.authorized) )
  $util.unauthorized()
#end
#if( $authResult && !$util.isNullOrEmpty($authResult.authFilter) )
  #if( $util.isNullOrEmpty($ctx.args.filter) )
    #set( $ctx.args.filter = $authResult.authFilter )
  #else
    #set( $ctx.args.filter = {
  \\"and\\":   [$authResult.authFilter, $ctx.args.filter]
} )
  #end
#end
$util.toJson({\\"version\\":\\"2018-05-29\\",\\"payload\\":{}})
## [End] Authorization rules. **"
`;

exports[`Verify RDS Model level Auth rules on subscriptions: should successfully transform apiKey auth rule 8`] = `
"## [Start] Sandbox Mode Disabled. **
#if( !$ctx.stash.get(\\"hasAuth\\") )
  $util.unauthorized()
#end
$util.toJson({})
## [End] Sandbox Mode Disabled. **"
`;

exports[`Verify RDS Model level Auth rules on subscriptions: should successfully transform apiKey auth rule 9`] = `
"## [Start] Subscription Response template. **
#if( !$util.isNullOrEmpty($ctx.args.filter) )
$extensions.setSubscriptionFilter($util.transform.toSubscriptionFilter($ctx.args.filter))
#end
$util.toJson(null)
## [End] Subscription Response template. **"
`;

exports[`Verify RDS Model level Auth rules on subscriptions: should successfully transform cognito auth rules 1`] = `
"## [Start] Authorization rules. **
$util.qr($ctx.stash.put(\\"hasAuth\\", true))
#set( $authRules = [] )
#if( $ctx.stash.adminRoles && $ctx.stash.adminRoles.size() > 0 )
  $util.qr($authRules.add({
  \\"provider\\": \\"iam\\",
  \\"type\\": \\"admin\\",
  \\"strict\\": false,
  \\"roles\\": $ctx.stash.adminRoles
}))
#end
$util.qr($authRules.add({
  \\"type\\": \\"private\\",
  \\"provider\\": \\"userPools\\"
}))
#set( $authResult = $util.authRules.subscriptionAuth($authRules) )
#if( !$authResult || ($authResult && !$authResult.authorized) )
  $util.unauthorized()
#end
#if( $authResult && !$util.isNullOrEmpty($authResult.authFilter) )
  #if( $util.isNullOrEmpty($ctx.args.filter) )
    #set( $ctx.args.filter = $authResult.authFilter )
  #else
    #set( $ctx.args.filter = {
  \\"and\\":   [$authResult.authFilter, $ctx.args.filter]
} )
  #end
#end
$util.toJson({\\"version\\":\\"2018-05-29\\",\\"payload\\":{}})
## [End] Authorization rules. **"
`;

exports[`Verify RDS Model level Auth rules on subscriptions: should successfully transform cognito auth rules 2`] = `
"## [Start] Sandbox Mode Disabled. **
#if( !$ctx.stash.get(\\"hasAuth\\") )
  $util.unauthorized()
#end
$util.toJson({})
## [End] Sandbox Mode Disabled. **"
`;

exports[`Verify RDS Model level Auth rules on subscriptions: should successfully transform cognito auth rules 3`] = `
"## [Start] Subscription Response template. **
#if( !$util.isNullOrEmpty($ctx.args.filter) )
$extensions.setSubscriptionFilter($util.transform.toSubscriptionFilter($ctx.args.filter))
#end
$util.toJson(null)
## [End] Subscription Response template. **"
`;

exports[`Verify RDS Model level Auth rules on subscriptions: should successfully transform cognito auth rules 4`] = `
"## [Start] Authorization rules. **
$util.qr($ctx.stash.put(\\"hasAuth\\", true))
#set( $authRules = [] )
#if( $ctx.stash.adminRoles && $ctx.stash.adminRoles.size() > 0 )
  $util.qr($authRules.add({
  \\"provider\\": \\"iam\\",
  \\"type\\": \\"admin\\",
  \\"strict\\": false,
  \\"roles\\": $ctx.stash.adminRoles
}))
#end
$util.qr($authRules.add({
  \\"type\\": \\"private\\",
  \\"provider\\": \\"userPools\\"
}))
#set( $authResult = $util.authRules.subscriptionAuth($authRules) )
#if( !$authResult || ($authResult && !$authResult.authorized) )
  $util.unauthorized()
#end
#if( $authResult && !$util.isNullOrEmpty($authResult.authFilter) )
  #if( $util.isNullOrEmpty($ctx.args.filter) )
    #set( $ctx.args.filter = $authResult.authFilter )
  #else
    #set( $ctx.args.filter = {
  \\"and\\":   [$authResult.authFilter, $ctx.args.filter]
} )
  #end
#end
$util.toJson({\\"version\\":\\"2018-05-29\\",\\"payload\\":{}})
## [End] Authorization rules. **"
`;

exports[`Verify RDS Model level Auth rules on subscriptions: should successfully transform cognito auth rules 5`] = `
"## [Start] Sandbox Mode Disabled. **
#if( !$ctx.stash.get(\\"hasAuth\\") )
  $util.unauthorized()
#end
$util.toJson({})
## [End] Sandbox Mode Disabled. **"
`;

exports[`Verify RDS Model level Auth rules on subscriptions: should successfully transform cognito auth rules 6`] = `
"## [Start] Subscription Response template. **
#if( !$util.isNullOrEmpty($ctx.args.filter) )
$extensions.setSubscriptionFilter($util.transform.toSubscriptionFilter($ctx.args.filter))
#end
$util.toJson(null)
## [End] Subscription Response template. **"
`;

exports[`Verify RDS Model level Auth rules on subscriptions: should successfully transform cognito auth rules 7`] = `
"## [Start] Authorization rules. **
$util.qr($ctx.stash.put(\\"hasAuth\\", true))
#set( $authRules = [] )
#if( $ctx.stash.adminRoles && $ctx.stash.adminRoles.size() > 0 )
  $util.qr($authRules.add({
  \\"provider\\": \\"iam\\",
  \\"type\\": \\"admin\\",
  \\"strict\\": false,
  \\"roles\\": $ctx.stash.adminRoles
}))
#end
$util.qr($authRules.add({
  \\"type\\": \\"private\\",
  \\"provider\\": \\"userPools\\"
}))
#set( $authResult = $util.authRules.subscriptionAuth($authRules) )
#if( !$authResult || ($authResult && !$authResult.authorized) )
  $util.unauthorized()
#end
#if( $authResult && !$util.isNullOrEmpty($authResult.authFilter) )
  #if( $util.isNullOrEmpty($ctx.args.filter) )
    #set( $ctx.args.filter = $authResult.authFilter )
  #else
    #set( $ctx.args.filter = {
  \\"and\\":   [$authResult.authFilter, $ctx.args.filter]
} )
  #end
#end
$util.toJson({\\"version\\":\\"2018-05-29\\",\\"payload\\":{}})
## [End] Authorization rules. **"
`;

exports[`Verify RDS Model level Auth rules on subscriptions: should successfully transform cognito auth rules 8`] = `
"## [Start] Sandbox Mode Disabled. **
#if( !$ctx.stash.get(\\"hasAuth\\") )
  $util.unauthorized()
#end
$util.toJson({})
## [End] Sandbox Mode Disabled. **"
`;

exports[`Verify RDS Model level Auth rules on subscriptions: should successfully transform cognito auth rules 9`] = `
"## [Start] Subscription Response template. **
#if( !$util.isNullOrEmpty($ctx.args.filter) )
$extensions.setSubscriptionFilter($util.transform.toSubscriptionFilter($ctx.args.filter))
#end
$util.toJson(null)
## [End] Subscription Response template. **"
`;

exports[`Verify RDS Model level Auth rules on subscriptions: should successfully transform cognito auth rules 10`] = `
"## [Start] Authorization rules. **
$util.qr($ctx.stash.put(\\"hasAuth\\", true))
#set( $authRules = [] )
#if( $ctx.stash.adminRoles && $ctx.stash.adminRoles.size() > 0 )
  $util.qr($authRules.add({
  \\"provider\\": \\"iam\\",
  \\"type\\": \\"admin\\",
  \\"strict\\": false,
  \\"roles\\": $ctx.stash.adminRoles
}))
#end
$util.qr($authRules.add({
  \\"type\\": \\"owner\\",
  \\"provider\\": \\"userPools\\",
  \\"ownerFieldName\\": \\"owner\\",
  \\"ownerFieldType\\": \\"string\\"
}))
#set( $authResult = $util.authRules.subscriptionAuth($authRules) )
#if( !$authResult || ($authResult && !$authResult.authorized) )
  $util.unauthorized()
#end
#if( $authResult && !$util.isNullOrEmpty($authResult.authFilter) )
  #if( $util.isNullOrEmpty($ctx.args.filter) )
    #set( $ctx.args.filter = $authResult.authFilter )
  #else
    #set( $ctx.args.filter = {
  \\"and\\":   [$authResult.authFilter, $ctx.args.filter]
} )
  #end
#end
$util.toJson({\\"version\\":\\"2018-05-29\\",\\"payload\\":{}})
## [End] Authorization rules. **"
`;

exports[`Verify RDS Model level Auth rules on subscriptions: should successfully transform cognito auth rules 11`] = `
"## [Start] Sandbox Mode Disabled. **
#if( !$ctx.stash.get(\\"hasAuth\\") )
  $util.unauthorized()
#end
$util.toJson({})
## [End] Sandbox Mode Disabled. **"
`;

exports[`Verify RDS Model level Auth rules on subscriptions: should successfully transform cognito auth rules 12`] = `
"## [Start] Subscription Response template. **
#if( !$util.isNullOrEmpty($ctx.args.filter) )
$extensions.setSubscriptionFilter($util.transform.toSubscriptionFilter($ctx.args.filter))
#end
$util.toJson(null)
## [End] Subscription Response template. **"
`;

exports[`Verify RDS Model level Auth rules on subscriptions: should successfully transform cognito auth rules 13`] = `
"## [Start] Authorization rules. **
$util.qr($ctx.stash.put(\\"hasAuth\\", true))
#set( $authRules = [] )
#if( $ctx.stash.adminRoles && $ctx.stash.adminRoles.size() > 0 )
  $util.qr($authRules.add({
  \\"provider\\": \\"iam\\",
  \\"type\\": \\"admin\\",
  \\"strict\\": false,
  \\"roles\\": $ctx.stash.adminRoles
}))
#end
$util.qr($authRules.add({
  \\"type\\": \\"owner\\",
  \\"provider\\": \\"userPools\\",
  \\"ownerFieldName\\": \\"owner\\",
  \\"ownerFieldType\\": \\"string\\"
}))
#set( $authResult = $util.authRules.subscriptionAuth($authRules) )
#if( !$authResult || ($authResult && !$authResult.authorized) )
  $util.unauthorized()
#end
#if( $authResult && !$util.isNullOrEmpty($authResult.authFilter) )
  #if( $util.isNullOrEmpty($ctx.args.filter) )
    #set( $ctx.args.filter = $authResult.authFilter )
  #else
    #set( $ctx.args.filter = {
  \\"and\\":   [$authResult.authFilter, $ctx.args.filter]
} )
  #end
#end
$util.toJson({\\"version\\":\\"2018-05-29\\",\\"payload\\":{}})
## [End] Authorization rules. **"
`;

exports[`Verify RDS Model level Auth rules on subscriptions: should successfully transform cognito auth rules 14`] = `
"## [Start] Sandbox Mode Disabled. **
#if( !$ctx.stash.get(\\"hasAuth\\") )
  $util.unauthorized()
#end
$util.toJson({})
## [End] Sandbox Mode Disabled. **"
`;

exports[`Verify RDS Model level Auth rules on subscriptions: should successfully transform cognito auth rules 15`] = `
"## [Start] Subscription Response template. **
#if( !$util.isNullOrEmpty($ctx.args.filter) )
$extensions.setSubscriptionFilter($util.transform.toSubscriptionFilter($ctx.args.filter))
#end
$util.toJson(null)
## [End] Subscription Response template. **"
`;

exports[`Verify RDS Model level Auth rules on subscriptions: should successfully transform cognito auth rules 16`] = `
"## [Start] Authorization rules. **
$util.qr($ctx.stash.put(\\"hasAuth\\", true))
#set( $authRules = [] )
#if( $ctx.stash.adminRoles && $ctx.stash.adminRoles.size() > 0 )
  $util.qr($authRules.add({
  \\"provider\\": \\"iam\\",
  \\"type\\": \\"admin\\",
  \\"strict\\": false,
  \\"roles\\": $ctx.stash.adminRoles
}))
#end
$util.qr($authRules.add({
  \\"type\\": \\"owner\\",
  \\"provider\\": \\"userPools\\",
  \\"ownerFieldName\\": \\"owner\\",
  \\"ownerFieldType\\": \\"string\\"
}))
#set( $authResult = $util.authRules.subscriptionAuth($authRules) )
#if( !$authResult || ($authResult && !$authResult.authorized) )
  $util.unauthorized()
#end
#if( $authResult && !$util.isNullOrEmpty($authResult.authFilter) )
  #if( $util.isNullOrEmpty($ctx.args.filter) )
    #set( $ctx.args.filter = $authResult.authFilter )
  #else
    #set( $ctx.args.filter = {
  \\"and\\":   [$authResult.authFilter, $ctx.args.filter]
} )
  #end
#end
$util.toJson({\\"version\\":\\"2018-05-29\\",\\"payload\\":{}})
## [End] Authorization rules. **"
`;

exports[`Verify RDS Model level Auth rules on subscriptions: should successfully transform cognito auth rules 17`] = `
"## [Start] Sandbox Mode Disabled. **
#if( !$ctx.stash.get(\\"hasAuth\\") )
  $util.unauthorized()
#end
$util.toJson({})
## [End] Sandbox Mode Disabled. **"
`;

exports[`Verify RDS Model level Auth rules on subscriptions: should successfully transform cognito auth rules 18`] = `
"## [Start] Subscription Response template. **
#if( !$util.isNullOrEmpty($ctx.args.filter) )
$extensions.setSubscriptionFilter($util.transform.toSubscriptionFilter($ctx.args.filter))
#end
$util.toJson(null)
## [End] Subscription Response template. **"
`;

exports[`Verify RDS Model level Auth rules on subscriptions: should successfully transform cognito auth rules 19`] = `
"## [Start] Authorization rules. **
$util.qr($ctx.stash.put(\\"hasAuth\\", true))
#set( $authRules = [] )
#if( $ctx.stash.adminRoles && $ctx.stash.adminRoles.size() > 0 )
  $util.qr($authRules.add({
  \\"provider\\": \\"iam\\",
  \\"type\\": \\"admin\\",
  \\"strict\\": false,
  \\"roles\\": $ctx.stash.adminRoles
}))
#end
$util.qr($authRules.add({
  \\"type\\": \\"owner\\",
  \\"provider\\": \\"userPools\\",
  \\"ownerFieldName\\": \\"owners\\",
  \\"ownerFieldType\\": \\"string[]\\"
}))
#set( $authResult = $util.authRules.subscriptionAuth($authRules) )
#if( !$authResult || ($authResult && !$authResult.authorized) )
  $util.unauthorized()
#end
#if( $authResult && !$util.isNullOrEmpty($authResult.authFilter) )
  #if( $util.isNullOrEmpty($ctx.args.filter) )
    #set( $ctx.args.filter = $authResult.authFilter )
  #else
    #set( $ctx.args.filter = {
  \\"and\\":   [$authResult.authFilter, $ctx.args.filter]
} )
  #end
#end
$util.toJson({\\"version\\":\\"2018-05-29\\",\\"payload\\":{}})
## [End] Authorization rules. **"
`;

exports[`Verify RDS Model level Auth rules on subscriptions: should successfully transform cognito auth rules 20`] = `
"## [Start] Sandbox Mode Disabled. **
#if( !$ctx.stash.get(\\"hasAuth\\") )
  $util.unauthorized()
#end
$util.toJson({})
## [End] Sandbox Mode Disabled. **"
`;

exports[`Verify RDS Model level Auth rules on subscriptions: should successfully transform cognito auth rules 21`] = `
"## [Start] Subscription Response template. **
#if( !$util.isNullOrEmpty($ctx.args.filter) )
$extensions.setSubscriptionFilter($util.transform.toSubscriptionFilter($ctx.args.filter))
#end
$util.toJson(null)
## [End] Subscription Response template. **"
`;

exports[`Verify RDS Model level Auth rules on subscriptions: should successfully transform cognito auth rules 22`] = `
"## [Start] Authorization rules. **
$util.qr($ctx.stash.put(\\"hasAuth\\", true))
#set( $authRules = [] )
#if( $ctx.stash.adminRoles && $ctx.stash.adminRoles.size() > 0 )
  $util.qr($authRules.add({
  \\"provider\\": \\"iam\\",
  \\"type\\": \\"admin\\",
  \\"strict\\": false,
  \\"roles\\": $ctx.stash.adminRoles
}))
#end
$util.qr($authRules.add({
  \\"type\\": \\"owner\\",
  \\"provider\\": \\"userPools\\",
  \\"ownerFieldName\\": \\"owners\\",
  \\"ownerFieldType\\": \\"string[]\\"
}))
#set( $authResult = $util.authRules.subscriptionAuth($authRules) )
#if( !$authResult || ($authResult && !$authResult.authorized) )
  $util.unauthorized()
#end
#if( $authResult && !$util.isNullOrEmpty($authResult.authFilter) )
  #if( $util.isNullOrEmpty($ctx.args.filter) )
    #set( $ctx.args.filter = $authResult.authFilter )
  #else
    #set( $ctx.args.filter = {
  \\"and\\":   [$authResult.authFilter, $ctx.args.filter]
} )
  #end
#end
$util.toJson({\\"version\\":\\"2018-05-29\\",\\"payload\\":{}})
## [End] Authorization rules. **"
`;

exports[`Verify RDS Model level Auth rules on subscriptions: should successfully transform cognito auth rules 23`] = `
"## [Start] Sandbox Mode Disabled. **
#if( !$ctx.stash.get(\\"hasAuth\\") )
  $util.unauthorized()
#end
$util.toJson({})
## [End] Sandbox Mode Disabled. **"
`;

exports[`Verify RDS Model level Auth rules on subscriptions: should successfully transform cognito auth rules 24`] = `
"## [Start] Subscription Response template. **
#if( !$util.isNullOrEmpty($ctx.args.filter) )
$extensions.setSubscriptionFilter($util.transform.toSubscriptionFilter($ctx.args.filter))
#end
$util.toJson(null)
## [End] Subscription Response template. **"
`;

exports[`Verify RDS Model level Auth rules on subscriptions: should successfully transform cognito auth rules 25`] = `
"## [Start] Authorization rules. **
$util.qr($ctx.stash.put(\\"hasAuth\\", true))
#set( $authRules = [] )
#if( $ctx.stash.adminRoles && $ctx.stash.adminRoles.size() > 0 )
  $util.qr($authRules.add({
  \\"provider\\": \\"iam\\",
  \\"type\\": \\"admin\\",
  \\"strict\\": false,
  \\"roles\\": $ctx.stash.adminRoles
}))
#end
$util.qr($authRules.add({
  \\"type\\": \\"owner\\",
  \\"provider\\": \\"userPools\\",
  \\"ownerFieldName\\": \\"owners\\",
  \\"ownerFieldType\\": \\"string[]\\"
}))
#set( $authResult = $util.authRules.subscriptionAuth($authRules) )
#if( !$authResult || ($authResult && !$authResult.authorized) )
  $util.unauthorized()
#end
#if( $authResult && !$util.isNullOrEmpty($authResult.authFilter) )
  #if( $util.isNullOrEmpty($ctx.args.filter) )
    #set( $ctx.args.filter = $authResult.authFilter )
  #else
    #set( $ctx.args.filter = {
  \\"and\\":   [$authResult.authFilter, $ctx.args.filter]
} )
  #end
#end
$util.toJson({\\"version\\":\\"2018-05-29\\",\\"payload\\":{}})
## [End] Authorization rules. **"
`;

exports[`Verify RDS Model level Auth rules on subscriptions: should successfully transform cognito auth rules 26`] = `
"## [Start] Sandbox Mode Disabled. **
#if( !$ctx.stash.get(\\"hasAuth\\") )
  $util.unauthorized()
#end
$util.toJson({})
## [End] Sandbox Mode Disabled. **"
`;

exports[`Verify RDS Model level Auth rules on subscriptions: should successfully transform cognito auth rules 27`] = `
"## [Start] Subscription Response template. **
#if( !$util.isNullOrEmpty($ctx.args.filter) )
$extensions.setSubscriptionFilter($util.transform.toSubscriptionFilter($ctx.args.filter))
#end
$util.toJson(null)
## [End] Subscription Response template. **"
`;

exports[`Verify RDS Model level Auth rules on subscriptions: should successfully transform cognito auth rules 28`] = `
"## [Start] Authorization rules. **
$util.qr($ctx.stash.put(\\"hasAuth\\", true))
#set( $authRules = [] )
#if( $ctx.stash.adminRoles && $ctx.stash.adminRoles.size() > 0 )
  $util.qr($authRules.add({
  \\"provider\\": \\"iam\\",
  \\"type\\": \\"admin\\",
  \\"strict\\": false,
  \\"roles\\": $ctx.stash.adminRoles
}))
#end
$util.qr($authRules.add({
  \\"type\\": \\"groups\\",
  \\"provider\\": \\"userPools\\",
  \\"allowedGroups\\":   [\\"Admin\\"],
  \\"groupClaim\\": \\"cognito:groups\\"
}))
$util.qr($authRules.add({
  \\"type\\": \\"groups\\",
  \\"provider\\": \\"userPools\\",
  \\"allowedGroups\\":   [\\"Moderator\\"],
  \\"groupClaim\\": \\"cognito:groups\\"
}))
#set( $authResult = $util.authRules.subscriptionAuth($authRules) )
#if( !$authResult || ($authResult && !$authResult.authorized) )
  $util.unauthorized()
#end
#if( $authResult && !$util.isNullOrEmpty($authResult.authFilter) )
  #if( $util.isNullOrEmpty($ctx.args.filter) )
    #set( $ctx.args.filter = $authResult.authFilter )
  #else
    #set( $ctx.args.filter = {
  \\"and\\":   [$authResult.authFilter, $ctx.args.filter]
} )
  #end
#end
$util.toJson({\\"version\\":\\"2018-05-29\\",\\"payload\\":{}})
## [End] Authorization rules. **"
`;

exports[`Verify RDS Model level Auth rules on subscriptions: should successfully transform cognito auth rules 29`] = `
"## [Start] Sandbox Mode Disabled. **
#if( !$ctx.stash.get(\\"hasAuth\\") )
  $util.unauthorized()
#end
$util.toJson({})
## [End] Sandbox Mode Disabled. **"
`;

exports[`Verify RDS Model level Auth rules on subscriptions: should successfully transform cognito auth rules 30`] = `
"## [Start] Subscription Response template. **
#if( !$util.isNullOrEmpty($ctx.args.filter) )
$extensions.setSubscriptionFilter($util.transform.toSubscriptionFilter($ctx.args.filter))
#end
$util.toJson(null)
## [End] Subscription Response template. **"
`;

exports[`Verify RDS Model level Auth rules on subscriptions: should successfully transform cognito auth rules 31`] = `
"## [Start] Authorization rules. **
$util.qr($ctx.stash.put(\\"hasAuth\\", true))
#set( $authRules = [] )
#if( $ctx.stash.adminRoles && $ctx.stash.adminRoles.size() > 0 )
  $util.qr($authRules.add({
  \\"provider\\": \\"iam\\",
  \\"type\\": \\"admin\\",
  \\"strict\\": false,
  \\"roles\\": $ctx.stash.adminRoles
}))
#end
$util.qr($authRules.add({
  \\"type\\": \\"groups\\",
  \\"provider\\": \\"userPools\\",
  \\"allowedGroups\\":   [\\"Admin\\"],
  \\"groupClaim\\": \\"cognito:groups\\"
}))
$util.qr($authRules.add({
  \\"type\\": \\"groups\\",
  \\"provider\\": \\"userPools\\",
  \\"allowedGroups\\":   [\\"Moderator\\"],
  \\"groupClaim\\": \\"cognito:groups\\"
}))
#set( $authResult = $util.authRules.subscriptionAuth($authRules) )
#if( !$authResult || ($authResult && !$authResult.authorized) )
  $util.unauthorized()
#end
#if( $authResult && !$util.isNullOrEmpty($authResult.authFilter) )
  #if( $util.isNullOrEmpty($ctx.args.filter) )
    #set( $ctx.args.filter = $authResult.authFilter )
  #else
    #set( $ctx.args.filter = {
  \\"and\\":   [$authResult.authFilter, $ctx.args.filter]
} )
  #end
#end
$util.toJson({\\"version\\":\\"2018-05-29\\",\\"payload\\":{}})
## [End] Authorization rules. **"
`;

exports[`Verify RDS Model level Auth rules on subscriptions: should successfully transform cognito auth rules 32`] = `
"## [Start] Sandbox Mode Disabled. **
#if( !$ctx.stash.get(\\"hasAuth\\") )
  $util.unauthorized()
#end
$util.toJson({})
## [End] Sandbox Mode Disabled. **"
`;

exports[`Verify RDS Model level Auth rules on subscriptions: should successfully transform cognito auth rules 33`] = `
"## [Start] Subscription Response template. **
#if( !$util.isNullOrEmpty($ctx.args.filter) )
$extensions.setSubscriptionFilter($util.transform.toSubscriptionFilter($ctx.args.filter))
#end
$util.toJson(null)
## [End] Subscription Response template. **"
`;

exports[`Verify RDS Model level Auth rules on subscriptions: should successfully transform cognito auth rules 34`] = `
"## [Start] Authorization rules. **
$util.qr($ctx.stash.put(\\"hasAuth\\", true))
#set( $authRules = [] )
#if( $ctx.stash.adminRoles && $ctx.stash.adminRoles.size() > 0 )
  $util.qr($authRules.add({
  \\"provider\\": \\"iam\\",
  \\"type\\": \\"admin\\",
  \\"strict\\": false,
  \\"roles\\": $ctx.stash.adminRoles
}))
#end
$util.qr($authRules.add({
  \\"type\\": \\"groups\\",
  \\"provider\\": \\"userPools\\",
  \\"allowedGroups\\":   [\\"Admin\\"],
  \\"groupClaim\\": \\"cognito:groups\\"
}))
$util.qr($authRules.add({
  \\"type\\": \\"groups\\",
  \\"provider\\": \\"userPools\\",
  \\"allowedGroups\\":   [\\"Moderator\\"],
  \\"groupClaim\\": \\"cognito:groups\\"
}))
#set( $authResult = $util.authRules.subscriptionAuth($authRules) )
#if( !$authResult || ($authResult && !$authResult.authorized) )
  $util.unauthorized()
#end
#if( $authResult && !$util.isNullOrEmpty($authResult.authFilter) )
  #if( $util.isNullOrEmpty($ctx.args.filter) )
    #set( $ctx.args.filter = $authResult.authFilter )
  #else
    #set( $ctx.args.filter = {
  \\"and\\":   [$authResult.authFilter, $ctx.args.filter]
} )
  #end
#end
$util.toJson({\\"version\\":\\"2018-05-29\\",\\"payload\\":{}})
## [End] Authorization rules. **"
`;

exports[`Verify RDS Model level Auth rules on subscriptions: should successfully transform cognito auth rules 35`] = `
"## [Start] Sandbox Mode Disabled. **
#if( !$ctx.stash.get(\\"hasAuth\\") )
  $util.unauthorized()
#end
$util.toJson({})
## [End] Sandbox Mode Disabled. **"
`;

exports[`Verify RDS Model level Auth rules on subscriptions: should successfully transform cognito auth rules 36`] = `
"## [Start] Subscription Response template. **
#if( !$util.isNullOrEmpty($ctx.args.filter) )
$extensions.setSubscriptionFilter($util.transform.toSubscriptionFilter($ctx.args.filter))
#end
$util.toJson(null)
## [End] Subscription Response template. **"
`;

exports[`Verify RDS Model level Auth rules on subscriptions: should successfully transform cognito auth rules 37`] = `
"## [Start] Authorization rules. **
$util.qr($ctx.stash.put(\\"hasAuth\\", true))
#set( $authRules = [] )
#if( $ctx.stash.adminRoles && $ctx.stash.adminRoles.size() > 0 )
  $util.qr($authRules.add({
  \\"provider\\": \\"iam\\",
  \\"type\\": \\"admin\\",
  \\"strict\\": false,
  \\"roles\\": $ctx.stash.adminRoles
}))
#end
$util.qr($authRules.add({
  \\"type\\": \\"groups\\",
  \\"provider\\": \\"userPools\\",
  \\"groupsFieldName\\": \\"group\\",
  \\"groupsFieldType\\": \\"string\\",
  \\"groupClaim\\": \\"cognito:groups\\"
}))
#set( $authResult = $util.authRules.subscriptionAuth($authRules) )
#if( !$authResult || ($authResult && !$authResult.authorized) )
  $util.unauthorized()
#end
#if( $authResult && !$util.isNullOrEmpty($authResult.authFilter) )
  #if( $util.isNullOrEmpty($ctx.args.filter) )
    #set( $ctx.args.filter = $authResult.authFilter )
  #else
    #set( $ctx.args.filter = {
  \\"and\\":   [$authResult.authFilter, $ctx.args.filter]
} )
  #end
#end
$util.toJson({\\"version\\":\\"2018-05-29\\",\\"payload\\":{}})
## [End] Authorization rules. **"
`;

exports[`Verify RDS Model level Auth rules on subscriptions: should successfully transform cognito auth rules 38`] = `
"## [Start] Sandbox Mode Disabled. **
#if( !$ctx.stash.get(\\"hasAuth\\") )
  $util.unauthorized()
#end
$util.toJson({})
## [End] Sandbox Mode Disabled. **"
`;

exports[`Verify RDS Model level Auth rules on subscriptions: should successfully transform cognito auth rules 39`] = `
"## [Start] Subscription Response template. **
#if( !$util.isNullOrEmpty($ctx.args.filter) )
$extensions.setSubscriptionFilter($util.transform.toSubscriptionFilter($ctx.args.filter))
#end
$util.toJson(null)
## [End] Subscription Response template. **"
`;

exports[`Verify RDS Model level Auth rules on subscriptions: should successfully transform cognito auth rules 40`] = `
"## [Start] Authorization rules. **
$util.qr($ctx.stash.put(\\"hasAuth\\", true))
#set( $authRules = [] )
#if( $ctx.stash.adminRoles && $ctx.stash.adminRoles.size() > 0 )
  $util.qr($authRules.add({
  \\"provider\\": \\"iam\\",
  \\"type\\": \\"admin\\",
  \\"strict\\": false,
  \\"roles\\": $ctx.stash.adminRoles
}))
#end
$util.qr($authRules.add({
  \\"type\\": \\"groups\\",
  \\"provider\\": \\"userPools\\",
  \\"groupsFieldName\\": \\"group\\",
  \\"groupsFieldType\\": \\"string\\",
  \\"groupClaim\\": \\"cognito:groups\\"
}))
#set( $authResult = $util.authRules.subscriptionAuth($authRules) )
#if( !$authResult || ($authResult && !$authResult.authorized) )
  $util.unauthorized()
#end
#if( $authResult && !$util.isNullOrEmpty($authResult.authFilter) )
  #if( $util.isNullOrEmpty($ctx.args.filter) )
    #set( $ctx.args.filter = $authResult.authFilter )
  #else
    #set( $ctx.args.filter = {
  \\"and\\":   [$authResult.authFilter, $ctx.args.filter]
} )
  #end
#end
$util.toJson({\\"version\\":\\"2018-05-29\\",\\"payload\\":{}})
## [End] Authorization rules. **"
`;

exports[`Verify RDS Model level Auth rules on subscriptions: should successfully transform cognito auth rules 41`] = `
"## [Start] Sandbox Mode Disabled. **
#if( !$ctx.stash.get(\\"hasAuth\\") )
  $util.unauthorized()
#end
$util.toJson({})
## [End] Sandbox Mode Disabled. **"
`;

exports[`Verify RDS Model level Auth rules on subscriptions: should successfully transform cognito auth rules 42`] = `
"## [Start] Subscription Response template. **
#if( !$util.isNullOrEmpty($ctx.args.filter) )
$extensions.setSubscriptionFilter($util.transform.toSubscriptionFilter($ctx.args.filter))
#end
$util.toJson(null)
## [End] Subscription Response template. **"
`;

exports[`Verify RDS Model level Auth rules on subscriptions: should successfully transform cognito auth rules 43`] = `
"## [Start] Authorization rules. **
$util.qr($ctx.stash.put(\\"hasAuth\\", true))
#set( $authRules = [] )
#if( $ctx.stash.adminRoles && $ctx.stash.adminRoles.size() > 0 )
  $util.qr($authRules.add({
  \\"provider\\": \\"iam\\",
  \\"type\\": \\"admin\\",
  \\"strict\\": false,
  \\"roles\\": $ctx.stash.adminRoles
}))
#end
$util.qr($authRules.add({
  \\"type\\": \\"groups\\",
  \\"provider\\": \\"userPools\\",
  \\"groupsFieldName\\": \\"group\\",
  \\"groupsFieldType\\": \\"string\\",
  \\"groupClaim\\": \\"cognito:groups\\"
}))
#set( $authResult = $util.authRules.subscriptionAuth($authRules) )
#if( !$authResult || ($authResult && !$authResult.authorized) )
  $util.unauthorized()
#end
#if( $authResult && !$util.isNullOrEmpty($authResult.authFilter) )
  #if( $util.isNullOrEmpty($ctx.args.filter) )
    #set( $ctx.args.filter = $authResult.authFilter )
  #else
    #set( $ctx.args.filter = {
  \\"and\\":   [$authResult.authFilter, $ctx.args.filter]
} )
  #end
#end
$util.toJson({\\"version\\":\\"2018-05-29\\",\\"payload\\":{}})
## [End] Authorization rules. **"
`;

exports[`Verify RDS Model level Auth rules on subscriptions: should successfully transform cognito auth rules 44`] = `
"## [Start] Sandbox Mode Disabled. **
#if( !$ctx.stash.get(\\"hasAuth\\") )
  $util.unauthorized()
#end
$util.toJson({})
## [End] Sandbox Mode Disabled. **"
`;

exports[`Verify RDS Model level Auth rules on subscriptions: should successfully transform cognito auth rules 45`] = `
"## [Start] Subscription Response template. **
#if( !$util.isNullOrEmpty($ctx.args.filter) )
$extensions.setSubscriptionFilter($util.transform.toSubscriptionFilter($ctx.args.filter))
#end
$util.toJson(null)
## [End] Subscription Response template. **"
`;

exports[`Verify RDS Model level Auth rules on subscriptions: should successfully transform cognito auth rules 46`] = `
"## [Start] Authorization rules. **
$util.qr($ctx.stash.put(\\"hasAuth\\", true))
#set( $authRules = [] )
#if( $ctx.stash.adminRoles && $ctx.stash.adminRoles.size() > 0 )
  $util.qr($authRules.add({
  \\"provider\\": \\"iam\\",
  \\"type\\": \\"admin\\",
  \\"strict\\": false,
  \\"roles\\": $ctx.stash.adminRoles
}))
#end
$util.qr($authRules.add({
  \\"type\\": \\"groups\\",
  \\"provider\\": \\"userPools\\",
  \\"groupsFieldName\\": \\"groups\\",
  \\"groupsFieldType\\": \\"string[]\\",
  \\"groupClaim\\": \\"cognito:groups\\"
}))
#set( $authResult = $util.authRules.subscriptionAuth($authRules) )
#if( !$authResult || ($authResult && !$authResult.authorized) )
  $util.unauthorized()
#end
#if( $authResult && !$util.isNullOrEmpty($authResult.authFilter) )
  #if( $util.isNullOrEmpty($ctx.args.filter) )
    #set( $ctx.args.filter = $authResult.authFilter )
  #else
    #set( $ctx.args.filter = {
  \\"and\\":   [$authResult.authFilter, $ctx.args.filter]
} )
  #end
#end
$util.toJson({\\"version\\":\\"2018-05-29\\",\\"payload\\":{}})
## [End] Authorization rules. **"
`;

exports[`Verify RDS Model level Auth rules on subscriptions: should successfully transform cognito auth rules 47`] = `
"## [Start] Sandbox Mode Disabled. **
#if( !$ctx.stash.get(\\"hasAuth\\") )
  $util.unauthorized()
#end
$util.toJson({})
## [End] Sandbox Mode Disabled. **"
`;

exports[`Verify RDS Model level Auth rules on subscriptions: should successfully transform cognito auth rules 48`] = `
"## [Start] Subscription Response template. **
#if( !$util.isNullOrEmpty($ctx.args.filter) )
$extensions.setSubscriptionFilter($util.transform.toSubscriptionFilter($ctx.args.filter))
#end
$util.toJson(null)
## [End] Subscription Response template. **"
`;

exports[`Verify RDS Model level Auth rules on subscriptions: should successfully transform cognito auth rules 49`] = `
"## [Start] Authorization rules. **
$util.qr($ctx.stash.put(\\"hasAuth\\", true))
#set( $authRules = [] )
#if( $ctx.stash.adminRoles && $ctx.stash.adminRoles.size() > 0 )
  $util.qr($authRules.add({
  \\"provider\\": \\"iam\\",
  \\"type\\": \\"admin\\",
  \\"strict\\": false,
  \\"roles\\": $ctx.stash.adminRoles
}))
#end
$util.qr($authRules.add({
  \\"type\\": \\"groups\\",
  \\"provider\\": \\"userPools\\",
  \\"groupsFieldName\\": \\"groups\\",
  \\"groupsFieldType\\": \\"string[]\\",
  \\"groupClaim\\": \\"cognito:groups\\"
}))
#set( $authResult = $util.authRules.subscriptionAuth($authRules) )
#if( !$authResult || ($authResult && !$authResult.authorized) )
  $util.unauthorized()
#end
#if( $authResult && !$util.isNullOrEmpty($authResult.authFilter) )
  #if( $util.isNullOrEmpty($ctx.args.filter) )
    #set( $ctx.args.filter = $authResult.authFilter )
  #else
    #set( $ctx.args.filter = {
  \\"and\\":   [$authResult.authFilter, $ctx.args.filter]
} )
  #end
#end
$util.toJson({\\"version\\":\\"2018-05-29\\",\\"payload\\":{}})
## [End] Authorization rules. **"
`;

exports[`Verify RDS Model level Auth rules on subscriptions: should successfully transform cognito auth rules 50`] = `
"## [Start] Sandbox Mode Disabled. **
#if( !$ctx.stash.get(\\"hasAuth\\") )
  $util.unauthorized()
#end
$util.toJson({})
## [End] Sandbox Mode Disabled. **"
`;

exports[`Verify RDS Model level Auth rules on subscriptions: should successfully transform cognito auth rules 51`] = `
"## [Start] Subscription Response template. **
#if( !$util.isNullOrEmpty($ctx.args.filter) )
$extensions.setSubscriptionFilter($util.transform.toSubscriptionFilter($ctx.args.filter))
#end
$util.toJson(null)
## [End] Subscription Response template. **"
`;

exports[`Verify RDS Model level Auth rules on subscriptions: should successfully transform cognito auth rules 52`] = `
"## [Start] Authorization rules. **
$util.qr($ctx.stash.put(\\"hasAuth\\", true))
#set( $authRules = [] )
#if( $ctx.stash.adminRoles && $ctx.stash.adminRoles.size() > 0 )
  $util.qr($authRules.add({
  \\"provider\\": \\"iam\\",
  \\"type\\": \\"admin\\",
  \\"strict\\": false,
  \\"roles\\": $ctx.stash.adminRoles
}))
#end
$util.qr($authRules.add({
  \\"type\\": \\"groups\\",
  \\"provider\\": \\"userPools\\",
  \\"groupsFieldName\\": \\"groups\\",
  \\"groupsFieldType\\": \\"string[]\\",
  \\"groupClaim\\": \\"cognito:groups\\"
}))
#set( $authResult = $util.authRules.subscriptionAuth($authRules) )
#if( !$authResult || ($authResult && !$authResult.authorized) )
  $util.unauthorized()
#end
#if( $authResult && !$util.isNullOrEmpty($authResult.authFilter) )
  #if( $util.isNullOrEmpty($ctx.args.filter) )
    #set( $ctx.args.filter = $authResult.authFilter )
  #else
    #set( $ctx.args.filter = {
  \\"and\\":   [$authResult.authFilter, $ctx.args.filter]
} )
  #end
#end
$util.toJson({\\"version\\":\\"2018-05-29\\",\\"payload\\":{}})
## [End] Authorization rules. **"
`;

exports[`Verify RDS Model level Auth rules on subscriptions: should successfully transform cognito auth rules 53`] = `
"## [Start] Sandbox Mode Disabled. **
#if( !$ctx.stash.get(\\"hasAuth\\") )
  $util.unauthorized()
#end
$util.toJson({})
## [End] Sandbox Mode Disabled. **"
`;

exports[`Verify RDS Model level Auth rules on subscriptions: should successfully transform cognito auth rules 54`] = `
"## [Start] Subscription Response template. **
#if( !$util.isNullOrEmpty($ctx.args.filter) )
$extensions.setSubscriptionFilter($util.transform.toSubscriptionFilter($ctx.args.filter))
#end
$util.toJson(null)
## [End] Subscription Response template. **"
`;

exports[`Verify RDS Model level Auth rules on subscriptions: should successfully transform function auth rule 1`] = `
"## [Start] Authorization rules. **
$util.qr($ctx.stash.put(\\"hasAuth\\", true))
#set( $authRules = [] )
#if( $ctx.stash.adminRoles && $ctx.stash.adminRoles.size() > 0 )
  $util.qr($authRules.add({
  \\"provider\\": \\"iam\\",
  \\"type\\": \\"admin\\",
  \\"strict\\": false,
  \\"roles\\": $ctx.stash.adminRoles
}))
#end
$util.qr($authRules.add({
  \\"type\\": \\"custom\\",
  \\"provider\\": \\"function\\"
}))
#set( $authResult = $util.authRules.subscriptionAuth($authRules) )
#if( !$authResult || ($authResult && !$authResult.authorized) )
  $util.unauthorized()
#end
#if( $authResult && !$util.isNullOrEmpty($authResult.authFilter) )
  #if( $util.isNullOrEmpty($ctx.args.filter) )
    #set( $ctx.args.filter = $authResult.authFilter )
  #else
    #set( $ctx.args.filter = {
  \\"and\\":   [$authResult.authFilter, $ctx.args.filter]
} )
  #end
#end
$util.toJson({\\"version\\":\\"2018-05-29\\",\\"payload\\":{}})
## [End] Authorization rules. **"
`;

exports[`Verify RDS Model level Auth rules on subscriptions: should successfully transform function auth rule 2`] = `
"## [Start] Sandbox Mode Disabled. **
#if( !$ctx.stash.get(\\"hasAuth\\") )
  $util.unauthorized()
#end
$util.toJson({})
## [End] Sandbox Mode Disabled. **"
`;

exports[`Verify RDS Model level Auth rules on subscriptions: should successfully transform function auth rule 3`] = `
"## [Start] Subscription Response template. **
#if( !$util.isNullOrEmpty($ctx.args.filter) )
$extensions.setSubscriptionFilter($util.transform.toSubscriptionFilter($ctx.args.filter))
#end
$util.toJson(null)
## [End] Subscription Response template. **"
`;

exports[`Verify RDS Model level Auth rules on subscriptions: should successfully transform function auth rule 4`] = `
"## [Start] Authorization rules. **
$util.qr($ctx.stash.put(\\"hasAuth\\", true))
#set( $authRules = [] )
#if( $ctx.stash.adminRoles && $ctx.stash.adminRoles.size() > 0 )
  $util.qr($authRules.add({
  \\"provider\\": \\"iam\\",
  \\"type\\": \\"admin\\",
  \\"strict\\": false,
  \\"roles\\": $ctx.stash.adminRoles
}))
#end
$util.qr($authRules.add({
  \\"type\\": \\"custom\\",
  \\"provider\\": \\"function\\"
}))
#set( $authResult = $util.authRules.subscriptionAuth($authRules) )
#if( !$authResult || ($authResult && !$authResult.authorized) )
  $util.unauthorized()
#end
#if( $authResult && !$util.isNullOrEmpty($authResult.authFilter) )
  #if( $util.isNullOrEmpty($ctx.args.filter) )
    #set( $ctx.args.filter = $authResult.authFilter )
  #else
    #set( $ctx.args.filter = {
  \\"and\\":   [$authResult.authFilter, $ctx.args.filter]
} )
  #end
#end
$util.toJson({\\"version\\":\\"2018-05-29\\",\\"payload\\":{}})
## [End] Authorization rules. **"
`;

exports[`Verify RDS Model level Auth rules on subscriptions: should successfully transform function auth rule 5`] = `
"## [Start] Sandbox Mode Disabled. **
#if( !$ctx.stash.get(\\"hasAuth\\") )
  $util.unauthorized()
#end
$util.toJson({})
## [End] Sandbox Mode Disabled. **"
`;

exports[`Verify RDS Model level Auth rules on subscriptions: should successfully transform function auth rule 6`] = `
"## [Start] Subscription Response template. **
#if( !$util.isNullOrEmpty($ctx.args.filter) )
$extensions.setSubscriptionFilter($util.transform.toSubscriptionFilter($ctx.args.filter))
#end
$util.toJson(null)
## [End] Subscription Response template. **"
`;

exports[`Verify RDS Model level Auth rules on subscriptions: should successfully transform function auth rule 7`] = `
"## [Start] Authorization rules. **
$util.qr($ctx.stash.put(\\"hasAuth\\", true))
#set( $authRules = [] )
#if( $ctx.stash.adminRoles && $ctx.stash.adminRoles.size() > 0 )
  $util.qr($authRules.add({
  \\"provider\\": \\"iam\\",
  \\"type\\": \\"admin\\",
  \\"strict\\": false,
  \\"roles\\": $ctx.stash.adminRoles
}))
#end
$util.qr($authRules.add({
  \\"type\\": \\"custom\\",
  \\"provider\\": \\"function\\"
}))
#set( $authResult = $util.authRules.subscriptionAuth($authRules) )
#if( !$authResult || ($authResult && !$authResult.authorized) )
  $util.unauthorized()
#end
#if( $authResult && !$util.isNullOrEmpty($authResult.authFilter) )
  #if( $util.isNullOrEmpty($ctx.args.filter) )
    #set( $ctx.args.filter = $authResult.authFilter )
  #else
    #set( $ctx.args.filter = {
  \\"and\\":   [$authResult.authFilter, $ctx.args.filter]
} )
  #end
#end
$util.toJson({\\"version\\":\\"2018-05-29\\",\\"payload\\":{}})
## [End] Authorization rules. **"
`;

exports[`Verify RDS Model level Auth rules on subscriptions: should successfully transform function auth rule 8`] = `
"## [Start] Sandbox Mode Disabled. **
#if( !$ctx.stash.get(\\"hasAuth\\") )
  $util.unauthorized()
#end
$util.toJson({})
## [End] Sandbox Mode Disabled. **"
`;

exports[`Verify RDS Model level Auth rules on subscriptions: should successfully transform function auth rule 9`] = `
"## [Start] Subscription Response template. **
#if( !$util.isNullOrEmpty($ctx.args.filter) )
$extensions.setSubscriptionFilter($util.transform.toSubscriptionFilter($ctx.args.filter))
#end
$util.toJson(null)
## [End] Subscription Response template. **"
`;

exports[`Verify RDS Model level Auth rules on subscriptions: should successfully transform iam auth rules 1`] = `
"## [Start] Authorization rules. **
$util.qr($ctx.stash.put(\\"hasAuth\\", true))
#set( $authRules = [] )
#if( $ctx.stash.adminRoles && $ctx.stash.adminRoles.size() > 0 )
  $util.qr($authRules.add({
  \\"provider\\": \\"iam\\",
  \\"type\\": \\"admin\\",
  \\"strict\\": false,
  \\"roles\\": $ctx.stash.adminRoles
}))
#end
$util.qr($authRules.add({
  \\"type\\": \\"private\\",
  \\"provider\\": \\"iam\\",
  \\"roleArn\\": $ctx.stash.authRole,
  \\"cognitoIdentityPoolId\\": $ctx.stash.identityPoolId
}))
#set( $authResult = $util.authRules.subscriptionAuth($authRules) )
#if( !$authResult || ($authResult && !$authResult.authorized) )
  $util.unauthorized()
#end
#if( $authResult && !$util.isNullOrEmpty($authResult.authFilter) )
  #if( $util.isNullOrEmpty($ctx.args.filter) )
    #set( $ctx.args.filter = $authResult.authFilter )
  #else
    #set( $ctx.args.filter = {
  \\"and\\":   [$authResult.authFilter, $ctx.args.filter]
} )
  #end
#end
$util.toJson({\\"version\\":\\"2018-05-29\\",\\"payload\\":{}})
## [End] Authorization rules. **"
`;

exports[`Verify RDS Model level Auth rules on subscriptions: should successfully transform iam auth rules 2`] = `
"## [Start] Sandbox Mode Disabled. **
#if( !$ctx.stash.get(\\"hasAuth\\") )
  $util.unauthorized()
#end
$util.toJson({})
## [End] Sandbox Mode Disabled. **"
`;

exports[`Verify RDS Model level Auth rules on subscriptions: should successfully transform iam auth rules 3`] = `
"## [Start] Subscription Response template. **
#if( !$util.isNullOrEmpty($ctx.args.filter) )
$extensions.setSubscriptionFilter($util.transform.toSubscriptionFilter($ctx.args.filter))
#end
$util.toJson(null)
## [End] Subscription Response template. **"
`;

exports[`Verify RDS Model level Auth rules on subscriptions: should successfully transform iam auth rules 4`] = `
"## [Start] Authorization rules. **
$util.qr($ctx.stash.put(\\"hasAuth\\", true))
#set( $authRules = [] )
#if( $ctx.stash.adminRoles && $ctx.stash.adminRoles.size() > 0 )
  $util.qr($authRules.add({
  \\"provider\\": \\"iam\\",
  \\"type\\": \\"admin\\",
  \\"strict\\": false,
  \\"roles\\": $ctx.stash.adminRoles
}))
#end
$util.qr($authRules.add({
  \\"type\\": \\"private\\",
  \\"provider\\": \\"iam\\",
  \\"roleArn\\": $ctx.stash.authRole,
  \\"cognitoIdentityPoolId\\": $ctx.stash.identityPoolId
}))
#set( $authResult = $util.authRules.subscriptionAuth($authRules) )
#if( !$authResult || ($authResult && !$authResult.authorized) )
  $util.unauthorized()
#end
#if( $authResult && !$util.isNullOrEmpty($authResult.authFilter) )
  #if( $util.isNullOrEmpty($ctx.args.filter) )
    #set( $ctx.args.filter = $authResult.authFilter )
  #else
    #set( $ctx.args.filter = {
  \\"and\\":   [$authResult.authFilter, $ctx.args.filter]
} )
  #end
#end
$util.toJson({\\"version\\":\\"2018-05-29\\",\\"payload\\":{}})
## [End] Authorization rules. **"
`;

exports[`Verify RDS Model level Auth rules on subscriptions: should successfully transform iam auth rules 5`] = `
"## [Start] Sandbox Mode Disabled. **
#if( !$ctx.stash.get(\\"hasAuth\\") )
  $util.unauthorized()
#end
$util.toJson({})
## [End] Sandbox Mode Disabled. **"
`;

exports[`Verify RDS Model level Auth rules on subscriptions: should successfully transform iam auth rules 6`] = `
"## [Start] Subscription Response template. **
#if( !$util.isNullOrEmpty($ctx.args.filter) )
$extensions.setSubscriptionFilter($util.transform.toSubscriptionFilter($ctx.args.filter))
#end
$util.toJson(null)
## [End] Subscription Response template. **"
`;

exports[`Verify RDS Model level Auth rules on subscriptions: should successfully transform iam auth rules 7`] = `
"## [Start] Authorization rules. **
$util.qr($ctx.stash.put(\\"hasAuth\\", true))
#set( $authRules = [] )
#if( $ctx.stash.adminRoles && $ctx.stash.adminRoles.size() > 0 )
  $util.qr($authRules.add({
  \\"provider\\": \\"iam\\",
  \\"type\\": \\"admin\\",
  \\"strict\\": false,
  \\"roles\\": $ctx.stash.adminRoles
}))
#end
$util.qr($authRules.add({
  \\"type\\": \\"private\\",
  \\"provider\\": \\"iam\\",
  \\"roleArn\\": $ctx.stash.authRole,
  \\"cognitoIdentityPoolId\\": $ctx.stash.identityPoolId
}))
#set( $authResult = $util.authRules.subscriptionAuth($authRules) )
#if( !$authResult || ($authResult && !$authResult.authorized) )
  $util.unauthorized()
#end
#if( $authResult && !$util.isNullOrEmpty($authResult.authFilter) )
  #if( $util.isNullOrEmpty($ctx.args.filter) )
    #set( $ctx.args.filter = $authResult.authFilter )
  #else
    #set( $ctx.args.filter = {
  \\"and\\":   [$authResult.authFilter, $ctx.args.filter]
} )
  #end
#end
$util.toJson({\\"version\\":\\"2018-05-29\\",\\"payload\\":{}})
## [End] Authorization rules. **"
`;

exports[`Verify RDS Model level Auth rules on subscriptions: should successfully transform iam auth rules 8`] = `
"## [Start] Sandbox Mode Disabled. **
#if( !$ctx.stash.get(\\"hasAuth\\") )
  $util.unauthorized()
#end
$util.toJson({})
## [End] Sandbox Mode Disabled. **"
`;

exports[`Verify RDS Model level Auth rules on subscriptions: should successfully transform iam auth rules 9`] = `
"## [Start] Subscription Response template. **
#if( !$util.isNullOrEmpty($ctx.args.filter) )
$extensions.setSubscriptionFilter($util.transform.toSubscriptionFilter($ctx.args.filter))
#end
$util.toJson(null)
## [End] Subscription Response template. **"
`;

exports[`Verify RDS Model level Auth rules on subscriptions: should successfully transform iam auth rules 10`] = `
"## [Start] Authorization rules. **
$util.qr($ctx.stash.put(\\"hasAuth\\", true))
#set( $authRules = [] )
#if( $ctx.stash.adminRoles && $ctx.stash.adminRoles.size() > 0 )
  $util.qr($authRules.add({
  \\"provider\\": \\"iam\\",
  \\"type\\": \\"admin\\",
  \\"strict\\": false,
  \\"roles\\": $ctx.stash.adminRoles
}))
#end
$util.qr($authRules.add({
  \\"type\\": \\"public\\",
  \\"provider\\": \\"iam\\",
  \\"roleArn\\": $ctx.stash.unauthRole
}))
#set( $authResult = $util.authRules.subscriptionAuth($authRules) )
#if( !$authResult || ($authResult && !$authResult.authorized) )
  $util.unauthorized()
#end
#if( $authResult && !$util.isNullOrEmpty($authResult.authFilter) )
  #if( $util.isNullOrEmpty($ctx.args.filter) )
    #set( $ctx.args.filter = $authResult.authFilter )
  #else
    #set( $ctx.args.filter = {
  \\"and\\":   [$authResult.authFilter, $ctx.args.filter]
} )
  #end
#end
$util.toJson({\\"version\\":\\"2018-05-29\\",\\"payload\\":{}})
## [End] Authorization rules. **"
`;

exports[`Verify RDS Model level Auth rules on subscriptions: should successfully transform iam auth rules 11`] = `
"## [Start] Sandbox Mode Disabled. **
#if( !$ctx.stash.get(\\"hasAuth\\") )
  $util.unauthorized()
#end
$util.toJson({})
## [End] Sandbox Mode Disabled. **"
`;

exports[`Verify RDS Model level Auth rules on subscriptions: should successfully transform iam auth rules 12`] = `
"## [Start] Subscription Response template. **
#if( !$util.isNullOrEmpty($ctx.args.filter) )
$extensions.setSubscriptionFilter($util.transform.toSubscriptionFilter($ctx.args.filter))
#end
$util.toJson(null)
## [End] Subscription Response template. **"
`;

exports[`Verify RDS Model level Auth rules on subscriptions: should successfully transform iam auth rules 13`] = `
"## [Start] Authorization rules. **
$util.qr($ctx.stash.put(\\"hasAuth\\", true))
#set( $authRules = [] )
#if( $ctx.stash.adminRoles && $ctx.stash.adminRoles.size() > 0 )
  $util.qr($authRules.add({
  \\"provider\\": \\"iam\\",
  \\"type\\": \\"admin\\",
  \\"strict\\": false,
  \\"roles\\": $ctx.stash.adminRoles
}))
#end
$util.qr($authRules.add({
  \\"type\\": \\"public\\",
  \\"provider\\": \\"iam\\",
  \\"roleArn\\": $ctx.stash.unauthRole
}))
#set( $authResult = $util.authRules.subscriptionAuth($authRules) )
#if( !$authResult || ($authResult && !$authResult.authorized) )
  $util.unauthorized()
#end
#if( $authResult && !$util.isNullOrEmpty($authResult.authFilter) )
  #if( $util.isNullOrEmpty($ctx.args.filter) )
    #set( $ctx.args.filter = $authResult.authFilter )
  #else
    #set( $ctx.args.filter = {
  \\"and\\":   [$authResult.authFilter, $ctx.args.filter]
} )
  #end
#end
$util.toJson({\\"version\\":\\"2018-05-29\\",\\"payload\\":{}})
## [End] Authorization rules. **"
`;

exports[`Verify RDS Model level Auth rules on subscriptions: should successfully transform iam auth rules 14`] = `
"## [Start] Sandbox Mode Disabled. **
#if( !$ctx.stash.get(\\"hasAuth\\") )
  $util.unauthorized()
#end
$util.toJson({})
## [End] Sandbox Mode Disabled. **"
`;

exports[`Verify RDS Model level Auth rules on subscriptions: should successfully transform iam auth rules 15`] = `
"## [Start] Subscription Response template. **
#if( !$util.isNullOrEmpty($ctx.args.filter) )
$extensions.setSubscriptionFilter($util.transform.toSubscriptionFilter($ctx.args.filter))
#end
$util.toJson(null)
## [End] Subscription Response template. **"
`;

exports[`Verify RDS Model level Auth rules on subscriptions: should successfully transform iam auth rules 16`] = `
"## [Start] Authorization rules. **
$util.qr($ctx.stash.put(\\"hasAuth\\", true))
#set( $authRules = [] )
#if( $ctx.stash.adminRoles && $ctx.stash.adminRoles.size() > 0 )
  $util.qr($authRules.add({
  \\"provider\\": \\"iam\\",
  \\"type\\": \\"admin\\",
  \\"strict\\": false,
  \\"roles\\": $ctx.stash.adminRoles
}))
#end
$util.qr($authRules.add({
  \\"type\\": \\"public\\",
  \\"provider\\": \\"iam\\",
  \\"roleArn\\": $ctx.stash.unauthRole
}))
#set( $authResult = $util.authRules.subscriptionAuth($authRules) )
#if( !$authResult || ($authResult && !$authResult.authorized) )
  $util.unauthorized()
#end
#if( $authResult && !$util.isNullOrEmpty($authResult.authFilter) )
  #if( $util.isNullOrEmpty($ctx.args.filter) )
    #set( $ctx.args.filter = $authResult.authFilter )
  #else
    #set( $ctx.args.filter = {
  \\"and\\":   [$authResult.authFilter, $ctx.args.filter]
} )
  #end
#end
$util.toJson({\\"version\\":\\"2018-05-29\\",\\"payload\\":{}})
## [End] Authorization rules. **"
`;

exports[`Verify RDS Model level Auth rules on subscriptions: should successfully transform iam auth rules 17`] = `
"## [Start] Sandbox Mode Disabled. **
#if( !$ctx.stash.get(\\"hasAuth\\") )
  $util.unauthorized()
#end
$util.toJson({})
## [End] Sandbox Mode Disabled. **"
`;

exports[`Verify RDS Model level Auth rules on subscriptions: should successfully transform iam auth rules 18`] = `
"## [Start] Subscription Response template. **
#if( !$util.isNullOrEmpty($ctx.args.filter) )
$extensions.setSubscriptionFilter($util.transform.toSubscriptionFilter($ctx.args.filter))
#end
$util.toJson(null)
## [End] Subscription Response template. **"
`;

exports[`Verify RDS Model level Auth rules on subscriptions: should successfully transform oidc auth rules 1`] = `
"## [Start] Authorization rules. **
$util.qr($ctx.stash.put(\\"hasAuth\\", true))
#set( $authRules = [] )
#if( $ctx.stash.adminRoles && $ctx.stash.adminRoles.size() > 0 )
  $util.qr($authRules.add({
  \\"provider\\": \\"iam\\",
  \\"type\\": \\"admin\\",
  \\"strict\\": false,
  \\"roles\\": $ctx.stash.adminRoles
}))
#end
$util.qr($authRules.add({
  \\"type\\": \\"private\\",
  \\"provider\\": \\"oidc\\"
}))
#set( $authResult = $util.authRules.subscriptionAuth($authRules) )
#if( !$authResult || ($authResult && !$authResult.authorized) )
  $util.unauthorized()
#end
#if( $authResult && !$util.isNullOrEmpty($authResult.authFilter) )
  #if( $util.isNullOrEmpty($ctx.args.filter) )
    #set( $ctx.args.filter = $authResult.authFilter )
  #else
    #set( $ctx.args.filter = {
  \\"and\\":   [$authResult.authFilter, $ctx.args.filter]
} )
  #end
#end
$util.toJson({\\"version\\":\\"2018-05-29\\",\\"payload\\":{}})
## [End] Authorization rules. **"
`;

exports[`Verify RDS Model level Auth rules on subscriptions: should successfully transform oidc auth rules 2`] = `
"## [Start] Sandbox Mode Disabled. **
#if( !$ctx.stash.get(\\"hasAuth\\") )
  $util.unauthorized()
#end
$util.toJson({})
## [End] Sandbox Mode Disabled. **"
`;

exports[`Verify RDS Model level Auth rules on subscriptions: should successfully transform oidc auth rules 3`] = `
"## [Start] Subscription Response template. **
#if( !$util.isNullOrEmpty($ctx.args.filter) )
$extensions.setSubscriptionFilter($util.transform.toSubscriptionFilter($ctx.args.filter))
#end
$util.toJson(null)
## [End] Subscription Response template. **"
`;

exports[`Verify RDS Model level Auth rules on subscriptions: should successfully transform oidc auth rules 4`] = `
"## [Start] Authorization rules. **
$util.qr($ctx.stash.put(\\"hasAuth\\", true))
#set( $authRules = [] )
#if( $ctx.stash.adminRoles && $ctx.stash.adminRoles.size() > 0 )
  $util.qr($authRules.add({
  \\"provider\\": \\"iam\\",
  \\"type\\": \\"admin\\",
  \\"strict\\": false,
  \\"roles\\": $ctx.stash.adminRoles
}))
#end
$util.qr($authRules.add({
  \\"type\\": \\"private\\",
  \\"provider\\": \\"oidc\\"
}))
#set( $authResult = $util.authRules.subscriptionAuth($authRules) )
#if( !$authResult || ($authResult && !$authResult.authorized) )
  $util.unauthorized()
#end
#if( $authResult && !$util.isNullOrEmpty($authResult.authFilter) )
  #if( $util.isNullOrEmpty($ctx.args.filter) )
    #set( $ctx.args.filter = $authResult.authFilter )
  #else
    #set( $ctx.args.filter = {
  \\"and\\":   [$authResult.authFilter, $ctx.args.filter]
} )
  #end
#end
$util.toJson({\\"version\\":\\"2018-05-29\\",\\"payload\\":{}})
## [End] Authorization rules. **"
`;

exports[`Verify RDS Model level Auth rules on subscriptions: should successfully transform oidc auth rules 5`] = `
"## [Start] Sandbox Mode Disabled. **
#if( !$ctx.stash.get(\\"hasAuth\\") )
  $util.unauthorized()
#end
$util.toJson({})
## [End] Sandbox Mode Disabled. **"
`;

exports[`Verify RDS Model level Auth rules on subscriptions: should successfully transform oidc auth rules 6`] = `
"## [Start] Subscription Response template. **
#if( !$util.isNullOrEmpty($ctx.args.filter) )
$extensions.setSubscriptionFilter($util.transform.toSubscriptionFilter($ctx.args.filter))
#end
$util.toJson(null)
## [End] Subscription Response template. **"
`;

exports[`Verify RDS Model level Auth rules on subscriptions: should successfully transform oidc auth rules 7`] = `
"## [Start] Authorization rules. **
$util.qr($ctx.stash.put(\\"hasAuth\\", true))
#set( $authRules = [] )
#if( $ctx.stash.adminRoles && $ctx.stash.adminRoles.size() > 0 )
  $util.qr($authRules.add({
  \\"provider\\": \\"iam\\",
  \\"type\\": \\"admin\\",
  \\"strict\\": false,
  \\"roles\\": $ctx.stash.adminRoles
}))
#end
$util.qr($authRules.add({
  \\"type\\": \\"private\\",
  \\"provider\\": \\"oidc\\"
}))
#set( $authResult = $util.authRules.subscriptionAuth($authRules) )
#if( !$authResult || ($authResult && !$authResult.authorized) )
  $util.unauthorized()
#end
#if( $authResult && !$util.isNullOrEmpty($authResult.authFilter) )
  #if( $util.isNullOrEmpty($ctx.args.filter) )
    #set( $ctx.args.filter = $authResult.authFilter )
  #else
    #set( $ctx.args.filter = {
  \\"and\\":   [$authResult.authFilter, $ctx.args.filter]
} )
  #end
#end
$util.toJson({\\"version\\":\\"2018-05-29\\",\\"payload\\":{}})
## [End] Authorization rules. **"
`;

exports[`Verify RDS Model level Auth rules on subscriptions: should successfully transform oidc auth rules 8`] = `
"## [Start] Sandbox Mode Disabled. **
#if( !$ctx.stash.get(\\"hasAuth\\") )
  $util.unauthorized()
#end
$util.toJson({})
## [End] Sandbox Mode Disabled. **"
`;

exports[`Verify RDS Model level Auth rules on subscriptions: should successfully transform oidc auth rules 9`] = `
"## [Start] Subscription Response template. **
#if( !$util.isNullOrEmpty($ctx.args.filter) )
$extensions.setSubscriptionFilter($util.transform.toSubscriptionFilter($ctx.args.filter))
#end
$util.toJson(null)
## [End] Subscription Response template. **"
`;

exports[`Verify RDS Model level Auth rules on subscriptions: should successfully transform oidc auth rules 10`] = `
"## [Start] Authorization rules. **
$util.qr($ctx.stash.put(\\"hasAuth\\", true))
#set( $authRules = [] )
#if( $ctx.stash.adminRoles && $ctx.stash.adminRoles.size() > 0 )
  $util.qr($authRules.add({
  \\"provider\\": \\"iam\\",
  \\"type\\": \\"admin\\",
  \\"strict\\": false,
  \\"roles\\": $ctx.stash.adminRoles
}))
#end
$util.qr($authRules.add({
  \\"type\\": \\"owner\\",
  \\"provider\\": \\"oidc\\",
  \\"ownerFieldName\\": \\"owner\\",
  \\"ownerFieldType\\": \\"string\\",
  \\"identityClaim\\": \\"sub::username\\"
}))
#set( $authResult = $util.authRules.subscriptionAuth($authRules) )
#if( !$authResult || ($authResult && !$authResult.authorized) )
  $util.unauthorized()
#end
#if( $authResult && !$util.isNullOrEmpty($authResult.authFilter) )
  #if( $util.isNullOrEmpty($ctx.args.filter) )
    #set( $ctx.args.filter = $authResult.authFilter )
  #else
    #set( $ctx.args.filter = {
  \\"and\\":   [$authResult.authFilter, $ctx.args.filter]
} )
  #end
#end
$util.toJson({\\"version\\":\\"2018-05-29\\",\\"payload\\":{}})
## [End] Authorization rules. **"
`;

exports[`Verify RDS Model level Auth rules on subscriptions: should successfully transform oidc auth rules 11`] = `
"## [Start] Sandbox Mode Disabled. **
#if( !$ctx.stash.get(\\"hasAuth\\") )
  $util.unauthorized()
#end
$util.toJson({})
## [End] Sandbox Mode Disabled. **"
`;

exports[`Verify RDS Model level Auth rules on subscriptions: should successfully transform oidc auth rules 12`] = `
"## [Start] Subscription Response template. **
#if( !$util.isNullOrEmpty($ctx.args.filter) )
$extensions.setSubscriptionFilter($util.transform.toSubscriptionFilter($ctx.args.filter))
#end
$util.toJson(null)
## [End] Subscription Response template. **"
`;

exports[`Verify RDS Model level Auth rules on subscriptions: should successfully transform oidc auth rules 13`] = `
"## [Start] Authorization rules. **
$util.qr($ctx.stash.put(\\"hasAuth\\", true))
#set( $authRules = [] )
#if( $ctx.stash.adminRoles && $ctx.stash.adminRoles.size() > 0 )
  $util.qr($authRules.add({
  \\"provider\\": \\"iam\\",
  \\"type\\": \\"admin\\",
  \\"strict\\": false,
  \\"roles\\": $ctx.stash.adminRoles
}))
#end
$util.qr($authRules.add({
  \\"type\\": \\"owner\\",
  \\"provider\\": \\"oidc\\",
  \\"ownerFieldName\\": \\"owner\\",
  \\"ownerFieldType\\": \\"string\\",
  \\"identityClaim\\": \\"sub::username\\"
}))
#set( $authResult = $util.authRules.subscriptionAuth($authRules) )
#if( !$authResult || ($authResult && !$authResult.authorized) )
  $util.unauthorized()
#end
#if( $authResult && !$util.isNullOrEmpty($authResult.authFilter) )
  #if( $util.isNullOrEmpty($ctx.args.filter) )
    #set( $ctx.args.filter = $authResult.authFilter )
  #else
    #set( $ctx.args.filter = {
  \\"and\\":   [$authResult.authFilter, $ctx.args.filter]
} )
  #end
#end
$util.toJson({\\"version\\":\\"2018-05-29\\",\\"payload\\":{}})
## [End] Authorization rules. **"
`;

exports[`Verify RDS Model level Auth rules on subscriptions: should successfully transform oidc auth rules 14`] = `
"## [Start] Sandbox Mode Disabled. **
#if( !$ctx.stash.get(\\"hasAuth\\") )
  $util.unauthorized()
#end
$util.toJson({})
## [End] Sandbox Mode Disabled. **"
`;

exports[`Verify RDS Model level Auth rules on subscriptions: should successfully transform oidc auth rules 15`] = `
"## [Start] Subscription Response template. **
#if( !$util.isNullOrEmpty($ctx.args.filter) )
$extensions.setSubscriptionFilter($util.transform.toSubscriptionFilter($ctx.args.filter))
#end
$util.toJson(null)
## [End] Subscription Response template. **"
`;

exports[`Verify RDS Model level Auth rules on subscriptions: should successfully transform oidc auth rules 16`] = `
"## [Start] Authorization rules. **
$util.qr($ctx.stash.put(\\"hasAuth\\", true))
#set( $authRules = [] )
#if( $ctx.stash.adminRoles && $ctx.stash.adminRoles.size() > 0 )
  $util.qr($authRules.add({
  \\"provider\\": \\"iam\\",
  \\"type\\": \\"admin\\",
  \\"strict\\": false,
  \\"roles\\": $ctx.stash.adminRoles
}))
#end
$util.qr($authRules.add({
  \\"type\\": \\"owner\\",
  \\"provider\\": \\"oidc\\",
  \\"ownerFieldName\\": \\"owner\\",
  \\"ownerFieldType\\": \\"string\\",
  \\"identityClaim\\": \\"sub::username\\"
}))
#set( $authResult = $util.authRules.subscriptionAuth($authRules) )
#if( !$authResult || ($authResult && !$authResult.authorized) )
  $util.unauthorized()
#end
#if( $authResult && !$util.isNullOrEmpty($authResult.authFilter) )
  #if( $util.isNullOrEmpty($ctx.args.filter) )
    #set( $ctx.args.filter = $authResult.authFilter )
  #else
    #set( $ctx.args.filter = {
  \\"and\\":   [$authResult.authFilter, $ctx.args.filter]
} )
  #end
#end
$util.toJson({\\"version\\":\\"2018-05-29\\",\\"payload\\":{}})
## [End] Authorization rules. **"
`;

exports[`Verify RDS Model level Auth rules on subscriptions: should successfully transform oidc auth rules 17`] = `
"## [Start] Sandbox Mode Disabled. **
#if( !$ctx.stash.get(\\"hasAuth\\") )
  $util.unauthorized()
#end
$util.toJson({})
## [End] Sandbox Mode Disabled. **"
`;

exports[`Verify RDS Model level Auth rules on subscriptions: should successfully transform oidc auth rules 18`] = `
"## [Start] Subscription Response template. **
#if( !$util.isNullOrEmpty($ctx.args.filter) )
$extensions.setSubscriptionFilter($util.transform.toSubscriptionFilter($ctx.args.filter))
#end
$util.toJson(null)
## [End] Subscription Response template. **"
`;

exports[`Verify RDS Model level Auth rules on subscriptions: should successfully transform oidc auth rules 19`] = `
"## [Start] Authorization rules. **
$util.qr($ctx.stash.put(\\"hasAuth\\", true))
#set( $authRules = [] )
#if( $ctx.stash.adminRoles && $ctx.stash.adminRoles.size() > 0 )
  $util.qr($authRules.add({
  \\"provider\\": \\"iam\\",
  \\"type\\": \\"admin\\",
  \\"strict\\": false,
  \\"roles\\": $ctx.stash.adminRoles
}))
#end
$util.qr($authRules.add({
  \\"type\\": \\"owner\\",
  \\"provider\\": \\"oidc\\",
  \\"ownerFieldName\\": \\"owners\\",
  \\"ownerFieldType\\": \\"string[]\\",
  \\"identityClaim\\": \\"sub::username\\"
}))
#set( $authResult = $util.authRules.subscriptionAuth($authRules) )
#if( !$authResult || ($authResult && !$authResult.authorized) )
  $util.unauthorized()
#end
#if( $authResult && !$util.isNullOrEmpty($authResult.authFilter) )
  #if( $util.isNullOrEmpty($ctx.args.filter) )
    #set( $ctx.args.filter = $authResult.authFilter )
  #else
    #set( $ctx.args.filter = {
  \\"and\\":   [$authResult.authFilter, $ctx.args.filter]
} )
  #end
#end
$util.toJson({\\"version\\":\\"2018-05-29\\",\\"payload\\":{}})
## [End] Authorization rules. **"
`;

exports[`Verify RDS Model level Auth rules on subscriptions: should successfully transform oidc auth rules 20`] = `
"## [Start] Sandbox Mode Disabled. **
#if( !$ctx.stash.get(\\"hasAuth\\") )
  $util.unauthorized()
#end
$util.toJson({})
## [End] Sandbox Mode Disabled. **"
`;

exports[`Verify RDS Model level Auth rules on subscriptions: should successfully transform oidc auth rules 21`] = `
"## [Start] Subscription Response template. **
#if( !$util.isNullOrEmpty($ctx.args.filter) )
$extensions.setSubscriptionFilter($util.transform.toSubscriptionFilter($ctx.args.filter))
#end
$util.toJson(null)
## [End] Subscription Response template. **"
`;

exports[`Verify RDS Model level Auth rules on subscriptions: should successfully transform oidc auth rules 22`] = `
"## [Start] Authorization rules. **
$util.qr($ctx.stash.put(\\"hasAuth\\", true))
#set( $authRules = [] )
#if( $ctx.stash.adminRoles && $ctx.stash.adminRoles.size() > 0 )
  $util.qr($authRules.add({
  \\"provider\\": \\"iam\\",
  \\"type\\": \\"admin\\",
  \\"strict\\": false,
  \\"roles\\": $ctx.stash.adminRoles
}))
#end
$util.qr($authRules.add({
  \\"type\\": \\"owner\\",
  \\"provider\\": \\"oidc\\",
  \\"ownerFieldName\\": \\"owners\\",
  \\"ownerFieldType\\": \\"string[]\\",
  \\"identityClaim\\": \\"sub::username\\"
}))
#set( $authResult = $util.authRules.subscriptionAuth($authRules) )
#if( !$authResult || ($authResult && !$authResult.authorized) )
  $util.unauthorized()
#end
#if( $authResult && !$util.isNullOrEmpty($authResult.authFilter) )
  #if( $util.isNullOrEmpty($ctx.args.filter) )
    #set( $ctx.args.filter = $authResult.authFilter )
  #else
    #set( $ctx.args.filter = {
  \\"and\\":   [$authResult.authFilter, $ctx.args.filter]
} )
  #end
#end
$util.toJson({\\"version\\":\\"2018-05-29\\",\\"payload\\":{}})
## [End] Authorization rules. **"
`;

exports[`Verify RDS Model level Auth rules on subscriptions: should successfully transform oidc auth rules 23`] = `
"## [Start] Sandbox Mode Disabled. **
#if( !$ctx.stash.get(\\"hasAuth\\") )
  $util.unauthorized()
#end
$util.toJson({})
## [End] Sandbox Mode Disabled. **"
`;

exports[`Verify RDS Model level Auth rules on subscriptions: should successfully transform oidc auth rules 24`] = `
"## [Start] Subscription Response template. **
#if( !$util.isNullOrEmpty($ctx.args.filter) )
$extensions.setSubscriptionFilter($util.transform.toSubscriptionFilter($ctx.args.filter))
#end
$util.toJson(null)
## [End] Subscription Response template. **"
`;

exports[`Verify RDS Model level Auth rules on subscriptions: should successfully transform oidc auth rules 25`] = `
"## [Start] Authorization rules. **
$util.qr($ctx.stash.put(\\"hasAuth\\", true))
#set( $authRules = [] )
#if( $ctx.stash.adminRoles && $ctx.stash.adminRoles.size() > 0 )
  $util.qr($authRules.add({
  \\"provider\\": \\"iam\\",
  \\"type\\": \\"admin\\",
  \\"strict\\": false,
  \\"roles\\": $ctx.stash.adminRoles
}))
#end
$util.qr($authRules.add({
  \\"type\\": \\"owner\\",
  \\"provider\\": \\"oidc\\",
  \\"ownerFieldName\\": \\"owners\\",
  \\"ownerFieldType\\": \\"string[]\\",
  \\"identityClaim\\": \\"sub::username\\"
}))
#set( $authResult = $util.authRules.subscriptionAuth($authRules) )
#if( !$authResult || ($authResult && !$authResult.authorized) )
  $util.unauthorized()
#end
#if( $authResult && !$util.isNullOrEmpty($authResult.authFilter) )
  #if( $util.isNullOrEmpty($ctx.args.filter) )
    #set( $ctx.args.filter = $authResult.authFilter )
  #else
    #set( $ctx.args.filter = {
  \\"and\\":   [$authResult.authFilter, $ctx.args.filter]
} )
  #end
#end
$util.toJson({\\"version\\":\\"2018-05-29\\",\\"payload\\":{}})
## [End] Authorization rules. **"
`;

exports[`Verify RDS Model level Auth rules on subscriptions: should successfully transform oidc auth rules 26`] = `
"## [Start] Sandbox Mode Disabled. **
#if( !$ctx.stash.get(\\"hasAuth\\") )
  $util.unauthorized()
#end
$util.toJson({})
## [End] Sandbox Mode Disabled. **"
`;

exports[`Verify RDS Model level Auth rules on subscriptions: should successfully transform oidc auth rules 27`] = `
"## [Start] Subscription Response template. **
#if( !$util.isNullOrEmpty($ctx.args.filter) )
$extensions.setSubscriptionFilter($util.transform.toSubscriptionFilter($ctx.args.filter))
#end
$util.toJson(null)
## [End] Subscription Response template. **"
`;

exports[`Verify RDS Model level Auth rules on subscriptions: should successfully transform oidc auth rules 28`] = `
"## [Start] Authorization rules. **
$util.qr($ctx.stash.put(\\"hasAuth\\", true))
#set( $authRules = [] )
#if( $ctx.stash.adminRoles && $ctx.stash.adminRoles.size() > 0 )
  $util.qr($authRules.add({
  \\"provider\\": \\"iam\\",
  \\"type\\": \\"admin\\",
  \\"strict\\": false,
  \\"roles\\": $ctx.stash.adminRoles
}))
#end
$util.qr($authRules.add({
  \\"type\\": \\"groups\\",
  \\"provider\\": \\"oidc\\",
  \\"allowedGroups\\":   [\\"Admin\\"],
  \\"groupClaim\\": \\"cognito:groups\\"
}))
$util.qr($authRules.add({
  \\"type\\": \\"groups\\",
  \\"provider\\": \\"oidc\\",
  \\"allowedGroups\\":   [\\"Moderator\\"],
  \\"groupClaim\\": \\"cognito:groups\\"
}))
#set( $authResult = $util.authRules.subscriptionAuth($authRules) )
#if( !$authResult || ($authResult && !$authResult.authorized) )
  $util.unauthorized()
#end
#if( $authResult && !$util.isNullOrEmpty($authResult.authFilter) )
  #if( $util.isNullOrEmpty($ctx.args.filter) )
    #set( $ctx.args.filter = $authResult.authFilter )
  #else
    #set( $ctx.args.filter = {
  \\"and\\":   [$authResult.authFilter, $ctx.args.filter]
} )
  #end
#end
$util.toJson({\\"version\\":\\"2018-05-29\\",\\"payload\\":{}})
## [End] Authorization rules. **"
`;

exports[`Verify RDS Model level Auth rules on subscriptions: should successfully transform oidc auth rules 29`] = `
"## [Start] Sandbox Mode Disabled. **
#if( !$ctx.stash.get(\\"hasAuth\\") )
  $util.unauthorized()
#end
$util.toJson({})
## [End] Sandbox Mode Disabled. **"
`;

exports[`Verify RDS Model level Auth rules on subscriptions: should successfully transform oidc auth rules 30`] = `
"## [Start] Subscription Response template. **
#if( !$util.isNullOrEmpty($ctx.args.filter) )
$extensions.setSubscriptionFilter($util.transform.toSubscriptionFilter($ctx.args.filter))
#end
$util.toJson(null)
## [End] Subscription Response template. **"
`;

exports[`Verify RDS Model level Auth rules on subscriptions: should successfully transform oidc auth rules 31`] = `
"## [Start] Authorization rules. **
$util.qr($ctx.stash.put(\\"hasAuth\\", true))
#set( $authRules = [] )
#if( $ctx.stash.adminRoles && $ctx.stash.adminRoles.size() > 0 )
  $util.qr($authRules.add({
  \\"provider\\": \\"iam\\",
  \\"type\\": \\"admin\\",
  \\"strict\\": false,
  \\"roles\\": $ctx.stash.adminRoles
}))
#end
$util.qr($authRules.add({
  \\"type\\": \\"groups\\",
  \\"provider\\": \\"oidc\\",
  \\"allowedGroups\\":   [\\"Admin\\"],
  \\"groupClaim\\": \\"cognito:groups\\"
}))
$util.qr($authRules.add({
  \\"type\\": \\"groups\\",
  \\"provider\\": \\"oidc\\",
  \\"allowedGroups\\":   [\\"Moderator\\"],
  \\"groupClaim\\": \\"cognito:groups\\"
}))
#set( $authResult = $util.authRules.subscriptionAuth($authRules) )
#if( !$authResult || ($authResult && !$authResult.authorized) )
  $util.unauthorized()
#end
#if( $authResult && !$util.isNullOrEmpty($authResult.authFilter) )
  #if( $util.isNullOrEmpty($ctx.args.filter) )
    #set( $ctx.args.filter = $authResult.authFilter )
  #else
    #set( $ctx.args.filter = {
  \\"and\\":   [$authResult.authFilter, $ctx.args.filter]
} )
  #end
#end
$util.toJson({\\"version\\":\\"2018-05-29\\",\\"payload\\":{}})
## [End] Authorization rules. **"
`;

exports[`Verify RDS Model level Auth rules on subscriptions: should successfully transform oidc auth rules 32`] = `
"## [Start] Sandbox Mode Disabled. **
#if( !$ctx.stash.get(\\"hasAuth\\") )
  $util.unauthorized()
#end
$util.toJson({})
## [End] Sandbox Mode Disabled. **"
`;

exports[`Verify RDS Model level Auth rules on subscriptions: should successfully transform oidc auth rules 33`] = `
"## [Start] Subscription Response template. **
#if( !$util.isNullOrEmpty($ctx.args.filter) )
$extensions.setSubscriptionFilter($util.transform.toSubscriptionFilter($ctx.args.filter))
#end
$util.toJson(null)
## [End] Subscription Response template. **"
`;

exports[`Verify RDS Model level Auth rules on subscriptions: should successfully transform oidc auth rules 34`] = `
"## [Start] Authorization rules. **
$util.qr($ctx.stash.put(\\"hasAuth\\", true))
#set( $authRules = [] )
#if( $ctx.stash.adminRoles && $ctx.stash.adminRoles.size() > 0 )
  $util.qr($authRules.add({
  \\"provider\\": \\"iam\\",
  \\"type\\": \\"admin\\",
  \\"strict\\": false,
  \\"roles\\": $ctx.stash.adminRoles
}))
#end
$util.qr($authRules.add({
  \\"type\\": \\"groups\\",
  \\"provider\\": \\"oidc\\",
  \\"allowedGroups\\":   [\\"Admin\\"],
  \\"groupClaim\\": \\"cognito:groups\\"
}))
$util.qr($authRules.add({
  \\"type\\": \\"groups\\",
  \\"provider\\": \\"oidc\\",
  \\"allowedGroups\\":   [\\"Moderator\\"],
  \\"groupClaim\\": \\"cognito:groups\\"
}))
#set( $authResult = $util.authRules.subscriptionAuth($authRules) )
#if( !$authResult || ($authResult && !$authResult.authorized) )
  $util.unauthorized()
#end
#if( $authResult && !$util.isNullOrEmpty($authResult.authFilter) )
  #if( $util.isNullOrEmpty($ctx.args.filter) )
    #set( $ctx.args.filter = $authResult.authFilter )
  #else
    #set( $ctx.args.filter = {
  \\"and\\":   [$authResult.authFilter, $ctx.args.filter]
} )
  #end
#end
$util.toJson({\\"version\\":\\"2018-05-29\\",\\"payload\\":{}})
## [End] Authorization rules. **"
`;

exports[`Verify RDS Model level Auth rules on subscriptions: should successfully transform oidc auth rules 35`] = `
"## [Start] Sandbox Mode Disabled. **
#if( !$ctx.stash.get(\\"hasAuth\\") )
  $util.unauthorized()
#end
$util.toJson({})
## [End] Sandbox Mode Disabled. **"
`;

exports[`Verify RDS Model level Auth rules on subscriptions: should successfully transform oidc auth rules 36`] = `
"## [Start] Subscription Response template. **
#if( !$util.isNullOrEmpty($ctx.args.filter) )
$extensions.setSubscriptionFilter($util.transform.toSubscriptionFilter($ctx.args.filter))
#end
$util.toJson(null)
## [End] Subscription Response template. **"
`;

exports[`Verify RDS Model level Auth rules on subscriptions: should successfully transform oidc auth rules 37`] = `
"## [Start] Authorization rules. **
$util.qr($ctx.stash.put(\\"hasAuth\\", true))
#set( $authRules = [] )
#if( $ctx.stash.adminRoles && $ctx.stash.adminRoles.size() > 0 )
  $util.qr($authRules.add({
  \\"provider\\": \\"iam\\",
  \\"type\\": \\"admin\\",
  \\"strict\\": false,
  \\"roles\\": $ctx.stash.adminRoles
}))
#end
$util.qr($authRules.add({
  \\"type\\": \\"groups\\",
  \\"provider\\": \\"oidc\\",
  \\"groupsFieldName\\": \\"group\\",
  \\"groupsFieldType\\": \\"string\\",
  \\"groupClaim\\": \\"cognito:groups\\"
}))
#set( $authResult = $util.authRules.subscriptionAuth($authRules) )
#if( !$authResult || ($authResult && !$authResult.authorized) )
  $util.unauthorized()
#end
#if( $authResult && !$util.isNullOrEmpty($authResult.authFilter) )
  #if( $util.isNullOrEmpty($ctx.args.filter) )
    #set( $ctx.args.filter = $authResult.authFilter )
  #else
    #set( $ctx.args.filter = {
  \\"and\\":   [$authResult.authFilter, $ctx.args.filter]
} )
  #end
#end
$util.toJson({\\"version\\":\\"2018-05-29\\",\\"payload\\":{}})
## [End] Authorization rules. **"
`;

exports[`Verify RDS Model level Auth rules on subscriptions: should successfully transform oidc auth rules 38`] = `
"## [Start] Sandbox Mode Disabled. **
#if( !$ctx.stash.get(\\"hasAuth\\") )
  $util.unauthorized()
#end
$util.toJson({})
## [End] Sandbox Mode Disabled. **"
`;

exports[`Verify RDS Model level Auth rules on subscriptions: should successfully transform oidc auth rules 39`] = `
"## [Start] Subscription Response template. **
#if( !$util.isNullOrEmpty($ctx.args.filter) )
$extensions.setSubscriptionFilter($util.transform.toSubscriptionFilter($ctx.args.filter))
#end
$util.toJson(null)
## [End] Subscription Response template. **"
`;

exports[`Verify RDS Model level Auth rules on subscriptions: should successfully transform oidc auth rules 40`] = `
"## [Start] Authorization rules. **
$util.qr($ctx.stash.put(\\"hasAuth\\", true))
#set( $authRules = [] )
#if( $ctx.stash.adminRoles && $ctx.stash.adminRoles.size() > 0 )
  $util.qr($authRules.add({
  \\"provider\\": \\"iam\\",
  \\"type\\": \\"admin\\",
  \\"strict\\": false,
  \\"roles\\": $ctx.stash.adminRoles
}))
#end
$util.qr($authRules.add({
  \\"type\\": \\"groups\\",
  \\"provider\\": \\"oidc\\",
  \\"groupsFieldName\\": \\"group\\",
  \\"groupsFieldType\\": \\"string\\",
  \\"groupClaim\\": \\"cognito:groups\\"
}))
#set( $authResult = $util.authRules.subscriptionAuth($authRules) )
#if( !$authResult || ($authResult && !$authResult.authorized) )
  $util.unauthorized()
#end
#if( $authResult && !$util.isNullOrEmpty($authResult.authFilter) )
  #if( $util.isNullOrEmpty($ctx.args.filter) )
    #set( $ctx.args.filter = $authResult.authFilter )
  #else
    #set( $ctx.args.filter = {
  \\"and\\":   [$authResult.authFilter, $ctx.args.filter]
} )
  #end
#end
$util.toJson({\\"version\\":\\"2018-05-29\\",\\"payload\\":{}})
## [End] Authorization rules. **"
`;

exports[`Verify RDS Model level Auth rules on subscriptions: should successfully transform oidc auth rules 41`] = `
"## [Start] Sandbox Mode Disabled. **
#if( !$ctx.stash.get(\\"hasAuth\\") )
  $util.unauthorized()
#end
$util.toJson({})
## [End] Sandbox Mode Disabled. **"
`;

exports[`Verify RDS Model level Auth rules on subscriptions: should successfully transform oidc auth rules 42`] = `
"## [Start] Subscription Response template. **
#if( !$util.isNullOrEmpty($ctx.args.filter) )
$extensions.setSubscriptionFilter($util.transform.toSubscriptionFilter($ctx.args.filter))
#end
$util.toJson(null)
## [End] Subscription Response template. **"
`;

exports[`Verify RDS Model level Auth rules on subscriptions: should successfully transform oidc auth rules 43`] = `
"## [Start] Authorization rules. **
$util.qr($ctx.stash.put(\\"hasAuth\\", true))
#set( $authRules = [] )
#if( $ctx.stash.adminRoles && $ctx.stash.adminRoles.size() > 0 )
  $util.qr($authRules.add({
  \\"provider\\": \\"iam\\",
  \\"type\\": \\"admin\\",
  \\"strict\\": false,
  \\"roles\\": $ctx.stash.adminRoles
}))
#end
$util.qr($authRules.add({
  \\"type\\": \\"groups\\",
  \\"provider\\": \\"oidc\\",
  \\"groupsFieldName\\": \\"group\\",
  \\"groupsFieldType\\": \\"string\\",
  \\"groupClaim\\": \\"cognito:groups\\"
}))
#set( $authResult = $util.authRules.subscriptionAuth($authRules) )
#if( !$authResult || ($authResult && !$authResult.authorized) )
  $util.unauthorized()
#end
#if( $authResult && !$util.isNullOrEmpty($authResult.authFilter) )
  #if( $util.isNullOrEmpty($ctx.args.filter) )
    #set( $ctx.args.filter = $authResult.authFilter )
  #else
    #set( $ctx.args.filter = {
  \\"and\\":   [$authResult.authFilter, $ctx.args.filter]
} )
  #end
#end
$util.toJson({\\"version\\":\\"2018-05-29\\",\\"payload\\":{}})
## [End] Authorization rules. **"
`;

exports[`Verify RDS Model level Auth rules on subscriptions: should successfully transform oidc auth rules 44`] = `
"## [Start] Sandbox Mode Disabled. **
#if( !$ctx.stash.get(\\"hasAuth\\") )
  $util.unauthorized()
#end
$util.toJson({})
## [End] Sandbox Mode Disabled. **"
`;

exports[`Verify RDS Model level Auth rules on subscriptions: should successfully transform oidc auth rules 45`] = `
"## [Start] Subscription Response template. **
#if( !$util.isNullOrEmpty($ctx.args.filter) )
$extensions.setSubscriptionFilter($util.transform.toSubscriptionFilter($ctx.args.filter))
#end
$util.toJson(null)
## [End] Subscription Response template. **"
`;

exports[`Verify RDS Model level Auth rules on subscriptions: should successfully transform oidc auth rules 46`] = `
"## [Start] Authorization rules. **
$util.qr($ctx.stash.put(\\"hasAuth\\", true))
#set( $authRules = [] )
#if( $ctx.stash.adminRoles && $ctx.stash.adminRoles.size() > 0 )
  $util.qr($authRules.add({
  \\"provider\\": \\"iam\\",
  \\"type\\": \\"admin\\",
  \\"strict\\": false,
  \\"roles\\": $ctx.stash.adminRoles
}))
#end
$util.qr($authRules.add({
  \\"type\\": \\"groups\\",
  \\"provider\\": \\"oidc\\",
  \\"groupsFieldName\\": \\"groups\\",
  \\"groupsFieldType\\": \\"string[]\\",
  \\"groupClaim\\": \\"cognito:groups\\"
}))
#set( $authResult = $util.authRules.subscriptionAuth($authRules) )
#if( !$authResult || ($authResult && !$authResult.authorized) )
  $util.unauthorized()
#end
#if( $authResult && !$util.isNullOrEmpty($authResult.authFilter) )
  #if( $util.isNullOrEmpty($ctx.args.filter) )
    #set( $ctx.args.filter = $authResult.authFilter )
  #else
    #set( $ctx.args.filter = {
  \\"and\\":   [$authResult.authFilter, $ctx.args.filter]
} )
  #end
#end
$util.toJson({\\"version\\":\\"2018-05-29\\",\\"payload\\":{}})
## [End] Authorization rules. **"
`;

exports[`Verify RDS Model level Auth rules on subscriptions: should successfully transform oidc auth rules 47`] = `
"## [Start] Sandbox Mode Disabled. **
#if( !$ctx.stash.get(\\"hasAuth\\") )
  $util.unauthorized()
#end
$util.toJson({})
## [End] Sandbox Mode Disabled. **"
`;

exports[`Verify RDS Model level Auth rules on subscriptions: should successfully transform oidc auth rules 48`] = `
"## [Start] Subscription Response template. **
#if( !$util.isNullOrEmpty($ctx.args.filter) )
$extensions.setSubscriptionFilter($util.transform.toSubscriptionFilter($ctx.args.filter))
#end
$util.toJson(null)
## [End] Subscription Response template. **"
`;

exports[`Verify RDS Model level Auth rules on subscriptions: should successfully transform oidc auth rules 49`] = `
"## [Start] Authorization rules. **
$util.qr($ctx.stash.put(\\"hasAuth\\", true))
#set( $authRules = [] )
#if( $ctx.stash.adminRoles && $ctx.stash.adminRoles.size() > 0 )
  $util.qr($authRules.add({
  \\"provider\\": \\"iam\\",
  \\"type\\": \\"admin\\",
  \\"strict\\": false,
  \\"roles\\": $ctx.stash.adminRoles
}))
#end
$util.qr($authRules.add({
  \\"type\\": \\"groups\\",
  \\"provider\\": \\"oidc\\",
  \\"groupsFieldName\\": \\"groups\\",
  \\"groupsFieldType\\": \\"string[]\\",
  \\"groupClaim\\": \\"cognito:groups\\"
}))
#set( $authResult = $util.authRules.subscriptionAuth($authRules) )
#if( !$authResult || ($authResult && !$authResult.authorized) )
  $util.unauthorized()
#end
#if( $authResult && !$util.isNullOrEmpty($authResult.authFilter) )
  #if( $util.isNullOrEmpty($ctx.args.filter) )
    #set( $ctx.args.filter = $authResult.authFilter )
  #else
    #set( $ctx.args.filter = {
  \\"and\\":   [$authResult.authFilter, $ctx.args.filter]
} )
  #end
#end
$util.toJson({\\"version\\":\\"2018-05-29\\",\\"payload\\":{}})
## [End] Authorization rules. **"
`;

exports[`Verify RDS Model level Auth rules on subscriptions: should successfully transform oidc auth rules 50`] = `
"## [Start] Sandbox Mode Disabled. **
#if( !$ctx.stash.get(\\"hasAuth\\") )
  $util.unauthorized()
#end
$util.toJson({})
## [End] Sandbox Mode Disabled. **"
`;

exports[`Verify RDS Model level Auth rules on subscriptions: should successfully transform oidc auth rules 51`] = `
"## [Start] Subscription Response template. **
#if( !$util.isNullOrEmpty($ctx.args.filter) )
$extensions.setSubscriptionFilter($util.transform.toSubscriptionFilter($ctx.args.filter))
#end
$util.toJson(null)
## [End] Subscription Response template. **"
`;

exports[`Verify RDS Model level Auth rules on subscriptions: should successfully transform oidc auth rules 52`] = `
"## [Start] Authorization rules. **
$util.qr($ctx.stash.put(\\"hasAuth\\", true))
#set( $authRules = [] )
#if( $ctx.stash.adminRoles && $ctx.stash.adminRoles.size() > 0 )
  $util.qr($authRules.add({
  \\"provider\\": \\"iam\\",
  \\"type\\": \\"admin\\",
  \\"strict\\": false,
  \\"roles\\": $ctx.stash.adminRoles
}))
#end
$util.qr($authRules.add({
  \\"type\\": \\"groups\\",
  \\"provider\\": \\"oidc\\",
  \\"groupsFieldName\\": \\"groups\\",
  \\"groupsFieldType\\": \\"string[]\\",
  \\"groupClaim\\": \\"cognito:groups\\"
}))
#set( $authResult = $util.authRules.subscriptionAuth($authRules) )
#if( !$authResult || ($authResult && !$authResult.authorized) )
  $util.unauthorized()
#end
#if( $authResult && !$util.isNullOrEmpty($authResult.authFilter) )
  #if( $util.isNullOrEmpty($ctx.args.filter) )
    #set( $ctx.args.filter = $authResult.authFilter )
  #else
    #set( $ctx.args.filter = {
  \\"and\\":   [$authResult.authFilter, $ctx.args.filter]
} )
  #end
#end
$util.toJson({\\"version\\":\\"2018-05-29\\",\\"payload\\":{}})
## [End] Authorization rules. **"
`;

exports[`Verify RDS Model level Auth rules on subscriptions: should successfully transform oidc auth rules 53`] = `
"## [Start] Sandbox Mode Disabled. **
#if( !$ctx.stash.get(\\"hasAuth\\") )
  $util.unauthorized()
#end
$util.toJson({})
## [End] Sandbox Mode Disabled. **"
`;

exports[`Verify RDS Model level Auth rules on subscriptions: should successfully transform oidc auth rules 54`] = `
"## [Start] Subscription Response template. **
#if( !$util.isNullOrEmpty($ctx.args.filter) )
$extensions.setSubscriptionFilter($util.transform.toSubscriptionFilter($ctx.args.filter))
#end
$util.toJson(null)
## [End] Subscription Response template. **"
`;
